--- a/article/sg0/doc/0006.md
+++ b/article/sg0/doc/0006.md
@@ -75,7 +75,7 @@
 “啊，那样的话，去秋叶原怎么样呀？琉华君跟菲莉丝呢，想跟久违的冈伦见个面啊。”  
 秋叶原……这里距离我家只有步行的距离，去秋叶原的话就要绕个大远。就算这样，我还是无法拒绝真由理的请求。  
 “啊……好吧。”  
-“真的！那我这就联络他们~”
+“真的！那我这就联络他们\~”
 
 夏天那会儿还会每天都来……倒不如说，基本是住在秋叶原。最近一周来三次就算很多了，也只是从大学回家的路上顺便停一下买东西而已。  
 从站前广场走了下去。  
@@ -83,7 +83,7 @@
 在秋叶原散发传单，然后还穿着圣诞老人服的女仆么……  
 从字面上来看也过于意义不明了。  
 
-“啊！是菲莉丝跟琉华君呢！嘟嘟噜~♪”  
+“啊！是菲莉丝跟琉华君呢！嘟嘟噜\~♪”  
 
 
 <br/>
