--- a/article/sg0/doc/0007.md
+++ b/article/sg0/doc/0007.md
@@ -4,14 +4,14 @@
 
 ![](../img/0007-1.png)
 
-“呜喵~凶真~”  
-“冈部先生~真由理酱~”  
+“呜喵\~凶真\~”  
+“冈部先生\~真由理酱\~”  
 已经汇合在等着我们的菲莉丝跟琉华子，见到我们以后马上跑了过来。  
-“真想见你啊喵~！”  
+“真想见你啊喵\~！”  
 毫不犹豫地抱紧我的，是菲莉丝·喵喵。虽然我知道这是所谓的“女仆小姐”模式用名，本名秋叶留未穗的她本人却一直强调说私下里也要叫她菲莉丝。明明实际身份是堪称秋叶原地主的秋叶家的大小姐，却在自家的女仆咖啡厅 *MayQueen+Nyan²* 开心地作为金牌女仆工作着。今天身上也是和以前一样，穿着店里的女仆装。*MayQueen* 里到时候是不是也会换上圣诞服装呢？  
 “别，别这样啦……大家都看着呢。”  
 想把菲莉丝从身上支开，但是却很难做到。干脆把头上的那个猫耳抢过来算了。  
-“有什么不好的喵！毕竟是凶真和菲莉丝的关系喵~”  
+“有什么不好的喵！毕竟是凶真和菲莉丝的关系喵\~”  
 “才不好呢。还有啊，凶真什么的别那么叫了。”  
 “为什喵？”  
 “因为那个名字是黑历史。”  
@@ -57,7 +57,7 @@
 菲莉丝：“哈啊……”  
 琉华子：“冈部先生，果然是很厉害的！”  
 “哈哈哈，既然是这样的话，向着职业网球运动员的目标去也未尝不可啊！”  
-真由理：“目标！温布尔顿！是吧~”  
+真由理：“目标！温布尔顿！是吧\~”  
 菲莉丝：“……”  
 “嗯？怎么了吗菲莉丝？头疼吗？”  
 菲莉丝：“该从哪里开始吐槽呢……不管怎么看，这都是社团为了拉新人而设计的陷阱啊喵……”  
@@ -79,9 +79,9 @@
 “别搞错了啊，我对女孩子什么的并不……”  
 实际上，虽然我也算成员之一，但那里并不是什么像我这种的临时现充能够待的地方。说到底，跟那群真现充根本不可能说得上话。在一群衣着光鲜的男女面前就只有我是一副不明所以的样子，这才是事实真相。对我来说实在是一种鲁莽的挑战……  
 这件事也是，还是不要跟菲莉丝他们说算了。  
-“真好啊——真由喜也想跟冈伦联谊呢~”  
+“真好啊——真由喜也想跟冈伦联谊呢\~”  
 啥？真由理！？是应该有这方面兴趣的年龄吗！？  
-“因为啊，是大家一起在快快乐乐的派对不是吗~？”  
+“因为啊，是大家一起在快快乐乐的派对不是吗\~？”  
 ……好像哪里不对。  
 “呜喵……虽然应该是没错就是了，但是果然还是觉得哪里有些微妙的不同喵……”  
 “在 LAB 怎么样啊？琉华君和菲莉丝酱当然都要来。还有桶子君，绹酱和铃小姐也——啊！”  
@@ -120,7 +120,7 @@
 听到这话的菲莉丝和琉华子，几乎同时点了下头。  
 “这件事，我参加了喵！”  
 “我也是！”  
-“诶嘿嘿~谢谢！冈伦也……愿意参加吗？”  
+“诶嘿嘿\~谢谢！冈伦也……愿意参加吗？”  
 “唔……这个……”  
 “不行……吗？”  
 “暂且不说我……铃羽应该不愿意吧？”  
@@ -153,7 +153,7 @@
 暂且，向着友都八喜方向走去。那边的话也有饮食街，可能正好。  
 “太好了喵！凶真——不对，冈伦，真大方喵！”  
 “非常感谢！”  
-“诶嘿嘿~要吃什么呢~炸鸡吗~”  
+“诶嘿嘿\~要吃什么呢\~炸鸡吗\~”  
 “多汁炸鸡？”  
 “真由喜满脑子全是这个喵。”  
 
