--- a/article/sg0/doc/0008.md
+++ b/article/sg0/doc/0008.md
@@ -41,14 +41,14 @@
 “莫非当真了？”  
 “……并没有。”  
 对于自己一瞬间相信了这件事闭口不谈。  
-“是吗？不过，再更加用功一些的话，未必不能让玩笑成真哟~”  
+“是吗？不过，再更加用功一些的话，未必不能让玩笑成真哟\~”  
 “假设就算是这样，还是做雷斯吉宁教授的助手更好。”  
 这是对她开我玩笑的逞强。  
 “教授的助手，比想象以上的还费劲哟，因为那一位真的是小孩子啊。”  
 一边说着，比屋定真帆不经意的来到我的身边，咚咚咚地敲打了数次我的手腕。  
 原来如此，是这个意思啊。用一些玩笑话，想借此来让我冷静下来。  
 “啊……抱歉了。谢谢。”  
-“你在说什么呢~？”  
+“你在说什么呢\~？”  
 本来以为是更粗枝大叶的人，实际上意外的……
 
 “那个，学姐？稍微来下。”  
@@ -72,7 +72,7 @@
 啊，啊啊——原来如此……  
 比屋定真帆的这个态度，和我了解的红莉栖可能会说的话考虑了一下，答案只有一个。  
 “这个 sweets（笑）……”  
-喃喃自语的说着曾经经常对红莉栖所使用的网络用语，心情一下变得轻松了起来。大概，是对比屋定真帆说了“不是挺相配的吗？”或者“学姐的春天也终于来到了呢~”，这样无聊的话，一定没错。要是有男女彼此间进行着哪怕是一点亲密的谈话，不管怎么样都会当作是在交往。这就是勇往直前贯彻 sweets（笑）之道的红莉栖。这系统是有多不得了啊，连这种地方都和本人一模一样真的合适吗？我不由得苦笑。莫非这家伙背着比屋定真帆和雷斯吉宁教授，偶尔偷偷地登陆着 @ch 呢？不，这家伙的话可能连发帖都有在干吧！就像曾经的红莉栖，用未来机械研究所的公用电脑，估算着没有人的时候悄悄的浏览 @ch 那样。  
+喃喃自语的说着曾经经常对红莉栖所使用的网络用语，心情一下变得轻松了起来。大概，是对比屋定真帆说了“不是挺相配的吗？”或者“学姐的春天也终于来到了呢\~”，这样无聊的话，一定没错。要是有男女彼此间进行着哪怕是一点亲密的谈话，不管怎么样都会当作是在交往。这就是勇往直前贯彻 sweets（笑）之道的红莉栖。这系统是有多不得了啊，连这种地方都和本人一模一样真的合适吗？我不由得苦笑。莫非这家伙背着比屋定真帆和雷斯吉宁教授，偶尔偷偷地登陆着 @ch 呢？不，这家伙的话可能连发帖都有在干吧！就像曾经的红莉栖，用未来机械研究所的公用电脑，估算着没有人的时候悄悄的浏览 @ch 那样。  
 
 “喂，喂！进来的时候好歹敲个门啊！”  
 “克里斯蒂娜！你放着该干的事情不做到底在看什么啊？”  
@@ -124,7 +124,7 @@
 这是从α世界线的红莉栖那里的现学现卖。但是，画面中的“她”却不为所动。  
 “这应该是因为科学家还没有完成一些重大的发现吧。”  
 “那么，你是认为时间机器一定会被造出来吗？”  
-“‘也不是说不可能’，我可是这样说过的哟~”  
+“‘也不是说不可能’，我可是这样说过的哟\~”  
 果然见解上还是存在着微妙的差异。是因为这里是β世界线吗？还是说——  
 “呐，比屋定小姐，‘她’是能够明白自己是从原版的记忆派生出来的存在吧。”  
 “当然。”  
