--- a/article/sg0/doc/0010.md
+++ b/article/sg0/doc/0010.md
@@ -82,9 +82,9 @@
 “新理论是？”  
 “那个……我还没有详细听过，好像是有关相对性理论的东西……”  
 红莉栖的笑脸上带上了一些为难的样子。  
-“哼~？”  
+“哼\~？”  
 含糊不清的措辞，让真帆感到了违和感，于是就不再进一步深究。  
-“总而言之路上小心，我会期待着你的礼物啦~”  
+“总而言之路上小心，我会期待着你的礼物啦\~”  
 “什么礼物比较好？”  
 “嗯……难得你去一趟秋叶原，要是有什么稀奇的就好了——你对秋叶原挺熟的吧？”  
 “诶？为什么？”  
@@ -123,7 +123,7 @@
 “喜欢吗？”  
 “你啊！”  
 真帆忍不住站了起来，靠向电脑屏幕。但是“红莉栖”却一脸清爽。  
-“没必要掩饰嘛。昨天毕竟是在他本人面前所以没有办法。现在只有我们两个人哦~”  
+“没必要掩饰嘛。昨天毕竟是在他本人面前所以没有办法。现在只有我们两个人哦\~”  
 话说红莉栖看起来很死板，但却意外地喜欢这种八卦，不如说是闺蜜间的私房话。真帆叹了口气，坐回椅子上。在只有她们的办公室里，椅子的摩擦声响了起来。  
 “真的没有那种感情。就连冈部先生是个怎样的人，也还没有完全明白。”  
 “原来如此。嘛，也是呢。”  
