--- a/article/sg0/doc/0012.md
+++ b/article/sg0/doc/0012.md
@@ -115,7 +115,7 @@
 “快躲起来铃羽！”  
 “*Okey-dokey!*”  
 铃羽的动作非常快，可能比刚才制服父亲还更快些。毫不发出任何响动，铃羽冲进了 LAB 最里面的开发室，帘子之后的狭小空间。差不多在铃羽钻到桌子底下的同时，LAB 的门被敲响了。  
-“你好~”  
+“你好\~”  
 那个声音铃羽当然也很熟悉——果然是**母亲**。同时铃羽也能分辨得出，父亲已经手忙脚乱了。咚咚的敲门声继续响起。  
 “真由理酱？”  
 “啊——来了来了，马上开门哦！”  
@@ -132,7 +132,7 @@
 “那是当然的。准备在这里做料理的吗？”  
 “是的，桥田君也请务必尝尝味道。”  
 “真由喜的……并不怎么想吃哦……”  
-“没问题的哟~真由理酱已经很拿手了。”  
+“没问题的哟\~真由理酱已经很拿手了。”  
 “嘿……嘿嘿……”  
 桶子明显很紧张。据铃羽所知，父亲只有在面对阿万音由季时才会表现出这种态度。桶子和真由理就像是亲人一样；与在 LAB 附近打工的留未姐——铃羽是用真实的名字来称呼菲莉丝的——也能亲密的接触。绝对不是因为不擅长应对女性。然而不知道为何，只有在阿万音由季的面前不能正常表现。铃羽把未来她会成为桶子的妻子并生下自己这件事情告诉了他本人——这可能是一个错误的决定，事到如今铃羽才这么觉得。  
 “那个，你**妹妹**今天不在吗？”  
@@ -146,7 +146,7 @@
 “唔哈，天使 ktkr！这样的感觉。”  
 “谢谢。桥田君也打扮一下吧？稍微瘦一点的话，我想就相当棒的哦！”  
 “唔哈哈……”  
-“我是说真的哟~”  
+“我是说真的哟\~”  
 “哦……哦！”  
 桥田至和阿万音由季，两人颇有些生硬地对话着。  
 
@@ -186,12 +186,12 @@
 刚才铃羽说要注意的那些地方，阿万音由季也一样不差地说到了。果然是母女啊……  
 这时，正在稍微怀念着家的感觉的铃羽，注意到了新的来访者的气息。  
 
-“嘟嘟噜~♪”  
+“嘟嘟噜\~♪”  
 玄关的门打开后，房间里响起了早已听惯的问候。  
-“不好意思呢，由季，稍微有点迟到了~”  
+“不好意思呢，由季，稍微有点迟到了\~”  
 是跟阿万音由季约好在这里会合的椎名真由理。  
 但是，不只是她，还有一个人的气息存在着。  
-“真由理酱，你好啊~冈部先生也在一起啊~”  
+“真由理酱，你好啊\~冈部先生也在一起啊\~”  
 “哦，冈伦啊。好久不见！”  
 “啊啊……好久不见。”  
 
