--- a/article/sg0/doc/0013.md
+++ b/article/sg0/doc/0013.md
@@ -61,9 +61,9 @@
 
 “妈妈……？不，不要！我不要！！不！！！”  
 好不容易才掌握情况的篝，一边挣扎着想要出去，一边向机外的妈妈呼喊着。  
-“不要紧的哟，篝~铃羽酱带着你呢，听话。”  
+“不要紧的哟，篝\~铃羽酱带着你呢，听话。”  
 “不行！不跟妈妈一起就不行！”  
-“到了过去的话，能见到以前的妈妈哦~比现在还要年轻好多，篝你也许会被吓到吧。”  
+“到了过去的话，能见到以前的妈妈哦\~比现在还要年轻好多，篝你也许会被吓到吧。”  
 真由理对着篝，递给了她一个小小的钥匙圈。应该是有些旧了，本来应该有着鲜亮绿色的外观，现在却掉色得很厉害。  
 “这个是妈妈一直珍惜着的乌帕钥匙圈哦，现在给篝了，一定要好好保管啊。”  
 将它放在篝的手心里之后，真由理带着眼泪笑着退开了。  
