--- a/article/sg0/doc/0014.md
+++ b/article/sg0/doc/0014.md
@@ -42,13 +42,13 @@
 手里提着大量东西的真由理向我打招呼。  
 “呐呐，刚才是不是在和谁说话？”  
 “嗯？啊啊……那个，刚才是……大学研究会的朋友。”  
-“是嘛~今天也要去玩吗？”  
+“是嘛\~今天也要去玩吗？”  
 “不，今天并没有什么预定。  
  真由理呢？要去打工吗？”  
 “不不，要在 LAB 和由季碰头。”  
 “LAB……”  
 不知道时机算好还是坏……  
-“对了，好久没来的冈伦要不要也一起来？可以吃到由季亲手做的料理哦~  
+“对了，好久没来的冈伦要不要也一起来？可以吃到由季亲手做的料理哦\~  
  另外呢，真由喜也准备努力制作的说！  
  怎么……样……？”  
 真由理越说越小声，越说越纠结的样子。  
@@ -64,20 +64,20 @@
 『等等，我这就去查』  
 「你还是别查了。一入腐界深似海啊。。。  
  如果有了在意的事，我会报告的」  
-『那就拜托你了哦~虽说我觉得那很累的』  
+『那就拜托你了哦\~虽说我觉得那很累的』  
 
-“诶嘿嘿~~”  
+“诶嘿嘿\~\~”  
 “你好像很高兴啊？”  
-“嗯！很开心哟~”  
+“嗯！很开心哟\~”  
 但是，我却相反。一旦来到这个地方，我紧张得胃液都像要逆流出来了。不太想和铃羽碰面啊……  
 “嗯？呀啊，这不是冈部嘛！”  
 一楼的显像管工房的们打开了。慢慢走出来的是身形魁梧的店长，也是这座大楼的房东——天王寺裕吾。
 
 ![](../img/0014-1.png)
 
-“店长先生！嘟嘟噜~♪”  
+“店长先生！嘟嘟噜\~♪”  
 “哦！”  
-“呜哇~只有一件 T 恤，不冷吗？”  
+“呜哇\~只有一件 T 恤，不冷吗？”  
 “因为锻炼过啦。”
 曾经我定居在 LAB 的时候，还擅自用“Mr. 布朗”这样的外号称呼他来着，原因是他对布朗管的喜爱，如他穿着的围裙胸前所写的一样。这样的碰面真是好久没有过了。  
 “冈部，看你这个样子，有在好好的做一个大学生的样子啊。”  
@@ -96,12 +96,12 @@
 “……走吧。”  
 天王寺先生的事情，随他去吧。比起这个，我为什么来到了这里？虽然觉得这样下去并不好……是因为真的想让“红莉栖”看看 LAB 吗？自己也没有整理好思绪，登上了台阶。
 
-“嘟嘟噜~♪”  
+“嘟嘟噜\~♪”  
 真由理先走了进去。  
-“不好意思呢，由季，稍微有点迟到了~”  
-“真由理酱，你好啊~”  
+“不好意思呢，由季，稍微有点迟到了\~”  
+“真由理酱，你好啊\~”  
 我窥视着屋内。屋里有桶子和阿万音由季在，两个人看见我，瞪大了眼睛。  
-“冈部先生也在一起啊~”  
+“冈部先生也在一起啊\~”  
 “哦，冈伦啊。好久不见！”  
 “啊啊……好久不见。”  
 迅速地观察了下屋内，并没有看见铃羽的身影。对于这点稍微松了口气。  
@@ -110,7 +110,7 @@
 “这说的也是。”  
 但是这种情况下也不方便把“红莉栖”叫出来啊……  
 跟着真由理走进 LAB，总之先坐在了沙发上。但是心情完全没有冷静下来，还是非常的坐立不安。而真由理已经开始和由季聊起天来。  
-“由季，这件洋服好可爱哟~”  
+“由季，这件洋服好可爱哟\~”  
 “就是想要真由理酱这么说，我才穿的哟！”  
 “真好啊，真由喜也想穿穿看的说。”  
 “之后要换穿试试吗？”  
