--- a/article/sg0/doc/0021.md
+++ b/article/sg0/doc/0021.md
@@ -36,7 +36,7 @@
 “就是！”  
 “我知道。稍微歇一会……”  
 铃羽竭尽最后的力气走到了沙发，瘫在上面，合上双眼。对自己说着，不要慌。  
-“真由喜去拿湿毛巾咯~”  
+“真由喜去拿湿毛巾咯\~”  
 “桥田君，铃羽小姐的换洗衣服呢？”  
 “啊，这边，都在里头呢。  
  ——我当然没有在里面哈啊哈啊、闻来闻去的。”  
@@ -48,9 +48,9 @@
 朦胧中，听着周围人对话的时候，一条冰凉的湿毛巾搭在自己额头上。  
 “怎么样？”  
 “不好意思，真由姐……”  
-“别介意~”  
+“别介意\~”  
 “我去买点感冒药，麻烦你们二位控场了。”  
-“嗯~”  
+“嗯\~”  
 “快去快回。”  
 “铃羽小姐，能起来吗？在你哥回来之前，先把衣服换了吧。”  
 铃羽睁开了眼睛。眼前，由季甚为担忧地看着自己。  
@@ -63,7 +63,7 @@
 铃羽大吃一惊，忙爬起身。  
 “我，我知道了……我自己脱……”  
 “全是汗……真由理酱，有干毛巾吗？”  
-“啊！给~”  
+“啊！给\~”  
 由季接过真由理从浴室拿过来的毛巾，轻柔地拭去铃羽额头和脖颈上的汗水。  
 “哇，好、好痒……”  
 “忍忍就过去了，又不是小孩子”  
