--- a/article/sg0/doc/0024.md
+++ b/article/sg0/doc/0024.md
@@ -8,31 +8,31 @@
 当然记得。真由理早就开始为了这一天准备了，应该是非常期待的吧。  
 “怎么样，能来吗？”  
 “能啊。6 点开始是吧？”  
-“嗯~现在，在大学？”  
+“嗯\~现在，在大学？”  
 “没，在和光市，应该是研究室一类的地方，来叨扰认识的教授。”  
-“唔诶诶~和光市……”  
+“唔诶诶\~和光市……”  
 这家伙，绝对连和光市在哪都不知道吧。  
 “赶得上吗？”  
 “没问题的。”  
-“那就好。等你哦~”  
+“那就好。等你哦\~”  
 突然，话筒那边真由理的远处，突然传来了其他女孩子们的声音。  
-吹雪：“冈伦~女孩子全部都穿上圣诞装等着你了哦~”  
-菲莉丝：“冈伦~等你喵~”  
+吹雪：“冈伦\~女孩子全部都穿上圣诞装等着你了哦\~”  
+菲莉丝：“冈伦\~等你喵\~”  
 绹：“在……在等你！”  
-吹雪：“来啊，琉华君也是~”  
+吹雪：“来啊，琉华君也是\~”  
 琉华：“诶诶？！我并不是女……”  
-枫：“琉华君也在 cosplay 哟~”  
+枫：“琉华君也在 cosplay 哟\~”  
 琉华：“不、不好意思！我马上脱下来！现在马上就脱下来……！”  
 由季：“啊啦，真可惜，明明这么合身的。”  
 “真是热闹啊……”  
-“诶嘿嘿~现在正在绝赞准备中~”  
-吹雪：“真由喜她啊，现在穿着超级迷你裙版的圣诞服，非常非常可爱的哟~  
+“诶嘿嘿\~现在正在绝赞准备中\~”  
+吹雪：“真由喜她啊，现在穿着超级迷你裙版的圣诞服，非常非常可爱的哟\~  
  顺便一提，胖次的颜色是粉色 da☆ze！”  
 “呜哇！吹雪酱你在说些什么啊！！”  
 “哦……”  
-“那、那个……对不起呢，让你听到了奇怪的话。总之，等你哦~”  
+“那、那个……对不起呢，让你听到了奇怪的话。总之，等你哦\~”  
 “啊啊……”  
-“那，待会儿再说吧~”  
+“那，待会儿再说吧\~”  
 派对现场的 LAB，看起来已经是祭典一般的状态了。女孩子们聚在一起，聊天也会越聊越起劲吧。琉华子……作为唯一的男生，加油啊！  
 我一边苦笑着，一边收起了手机。  
 
@@ -161,7 +161,7 @@
 “嗯……愿意的话……呢。”  
 “那么就这样，再见。真帆前辈就拜托了。”  
 “‘红莉栖’！”  
-“嘿嘿~”  
+“嘿嘿\~”  
 “红莉栖”挂断电话之后，我的心里超出想象的轻松。果然，我再次深刻地感受到，我心底里，是非常喜欢牧濑红莉栖的……  
 “但是，向人工智能道歉这种事，有那么奇怪吗？  
  我的朋友——之前在 *MayQueen* 里介绍过的那个家伙——一直对二次元的女孩子们下跪之类的……”  
