--- a/article/sg0/doc/0029.md
+++ b/article/sg0/doc/0029.md
@@ -212,7 +212,7 @@
 “冈伦……好难受哟……”  
 “啊，抱歉。”  
 抱得太紧了……被真由理提醒后，我松开了手。  
-“真由喜呢，相信着哟~一定能再见到冈伦，一直相信着。”  
+“真由喜呢，相信着哟\~一定能再见到冈伦，一直相信着。”  
 “啊……”  
 “太好了！你没事喵！”  
 “冈部先生！”  
@@ -226,7 +226,7 @@
 菲莉丝略显寂寞地说着，接着用手环绕我的脖子，用力地抱住。就这样将粉色的小嘴凑近我的耳边，像是要吻过来。  
 “喂喂……？”  
 这到底什么情况——  
-“喵哈哈，不用害羞喵~”  
+“喵哈哈，不用害羞喵\~”  
 恶作剧一般地笑着，菲莉丝——不，秋叶留未穗一边装作要吻我，一边在我耳边轻语：  
 “要小心。不管是防卫省的人还是美军的人都不可信。  
  大人总是谎话连篇。大家都不说真话。”  
