--- a/article/sg0/doc/0030.md
+++ b/article/sg0/doc/0030.md
@@ -12,7 +12,7 @@
 “呐……真由理，这里是，秋叶原对吧？”  
 “嗯……？”  
 “不是……吗？”  
-“是秋叶原的哟~”  
+“是秋叶原的哟\~”  
 “今天，是几号？”  
 “那个……21 号。”  
 “戈里巴乔夫，知道吗？”  
@@ -21,8 +21,8 @@
  啊，话说戈里巴什么的好像是苏联时期的吧？  
  果然提到俄罗斯就要说普金老大！  
  被他正面盯着的话，我可是有被吓尿的自信。”  
-“普金先生的话我知道哟~是俄罗斯的总统对吧？  
- 其实他很喜欢狗狗的哟~在养着秋田犬的，新闻有播的。”  
+“普金先生的话我知道哟\~是俄罗斯的总统对吧？  
+ 其实他很喜欢狗狗的哟\~在养着秋田犬的，新闻有播的。”  
 “总统……啊，是的，没错，是总统！”  
 “啊……？”（x3）  
 桶子的及时插入以及两人十分自然的对话，让我从心底里松了口气。然后发现真由理、桶子和铃羽全都在用诧异地眼神看着我。被这样看着也是久违的感觉了。我，回来了。从经常和死神擦肩而过的状态中解放了，就是这么一回事。可是——许多疑问又很快涌现而出。究竟为何世界线突然发生变动呢？有必要冷静地思考一下。  
@@ -82,7 +82,7 @@
 仔细一看，发出奇妙的声音回应的吹雪，正在毫无形象地在床上盘着腿，用旁边的小型液晶电视看着电视剧。眼睛虽然哭得红肿，嘴里却叼着 Pocky，看样子只是单纯地被电视剧感动了。  
 “啊咧……哦哦，大家又来啦！”  
 吹雪擦掉眼泪，用一如既往的笑容迎接我们。  
-“呼……真由喜紧张死了~听到吹雪酱在哭什么的……”  
+“呼……真由喜紧张死了\~听到吹雪酱在哭什么的……”  
 “真是太容易让人误会了……”  
 “抱歉抱歉。”  
 吹雪一边道着歉，一边又拿起一个巧克力零食塞进嘴里。她的头上戴着头套一样的东西，把头发束在一起。起初我以为她因为厌倦了住院生活不想弄头发才戴着这东西，事实好像并非如此。从头套延伸出数条数据线连接着腰间佩戴着的腰带，好像是监测脑电波的装置吧。想到这一点，我向病房内的其他患者看去。和吹雪一样，全员都佩戴着一样的装置。可能所有新型脑炎患者都佩戴着这样的东西。  
@@ -181,13 +181,13 @@
 “冈部先生，有护士过来了。”  
 “探病时间结束了哦。”  
 看了下时间，早就过了晚上 8 点了。  
-“匆匆忙忙的真是抱歉啊，吹雪酱。下次会早点来好好陪你的~”  
-“啊啊！真由喜~不要走~”  
-“可是，护士小姐要生气的哟~”  
-“那些事无所谓啦~今晚和我一起睡吧！”  
+“匆匆忙忙的真是抱歉啊，吹雪酱。下次会早点来好好陪你的\~”  
+“啊啊！真由喜\~不要走\~”  
+“可是，护士小姐要生气的哟\~”  
+“那些事无所谓啦\~今晚和我一起睡吧！”  
 吹雪已经回到了平常的样子，紧紧地抓着真由理的手。枫苦笑着把她的手拉开了。  
 “我们会尽量多过来的，不要说任性话哦……”  
-“只是尽量还不够啦~明天、后天放学后都要来啊~快要无聊死了~”  
+“只是尽量还不够啦\~明天、后天放学后都要来啊\~快要无聊死了\~”  
 吹雪故意地乱甩着手脚撒娇，枫微笑着摸了摸她的头。  
 “好好，那就再见啦……”  
 真由理和由季也效仿着枫，一边说着“乖孩子乖孩子”一边不停地安慰着她，最终，大家留下眼神像是被托放到狗窝的小狗一样的吹雪，离开了病房。走在最后离开病房的时候，我回过头去，吹雪坐在床上一直目送着我们。眼神对上了，于是我对她微微地点了点头。  
