--- a/article/sg0/doc/0033.md
+++ b/article/sg0/doc/0033.md
@@ -32,14 +32,14 @@
 “我也是。”  
 “大家都是一样呢！”  
 我可不觉得……大家都这样。倒不如说，小时候家里有焊锡的反而是比较少的？  
-“啊啊~想一直看下去……为什么我没有早一点来到这个地方？”  
+“啊啊\~想一直看下去……为什么我没有早一点来到这个地方？”  
 再这样陪她逛下去，估计无论多久都走不出这片地方，于是我提出差不多该去吃饭了，好不容易才成功把她从零件商店门口带走。到了大路上，因为这边是车站前，所以特别拥挤。在等着信号灯的人山人海中，几乎无法直线行走。那么，去哪里吃饭好呢？第一念头是 *MayQueen+Nyan²*，不过考虑到以前带她去时的情景，还是不要选择那里比较好。但是……对于秋叶原新手来说的话，Sanpo（牛丼屋）的难度太高了。雁船？还是厨房次郎？GOGO 咖喱也不错……  
 
 “啊……”  
 正在我边走边想东想西的时候，比屋定被眼前的游戏中心吸引，停下了脚步，似乎是对一层摆放的夹娃娃机有兴趣。  
 “稍微……进去看看如何？”  
 对于比屋定的提议，我点了点头。一靠近夹娃娃机，比屋定就像小孩子一样贴在玻璃上，观察着里面。那里装着各种 @ch 衍生的角色商品化的玩偶，大小各异。难道比屋定也和红莉栖一样，是个隐藏的 @cher？毕竟是关系亲密的前辈和后辈，的确有这个可能……于是我在比屋定耳边悄悄地念叨着咒文。  
-<abbr title="@ch 用语，起源于程序员版某人的发言“让我们用ぬるぽ（nurupo）来指代 NullPointerException 吧”，逐渐发展成每次出现这个词就会有人吐槽“ガッ（ga~tsu）”来表示击打。有人说“nurupo”的时候，肯定会有别的什么人吐槽“ga！”，这已经成为一种约定了。">
+<abbr title="@ch 用语，起源于程序员版某人的发言“让我们用ぬるぽ（nurupo）来指代 NullPointerException 吧”，逐渐发展成每次出现这个词就会有人吐槽“ガッ（ga\~tsu）”来表示击打。有人说“nurupo”的时候，肯定会有别的什么人吐槽“ga！”，这已经成为一种约定了。">
 “*nurupo*……”  
 </abbr>
 “啥？那是什么，那个 nuru……什么的？”  
@@ -68,13 +68,13 @@
 “nurupo。”  
 “ga！——  
  啊……（突然反应过来而沉默）  
- 呜啊~~~~~~（羞愧而发出了奇怪的叫声）”  
+ 呜啊\~\~\~\~\~\~（羞愧而发出了奇怪的叫声）”  
 这家伙，就算变成『Amadeus』也还是一样啊。  
 “比屋定，红莉栖有告诉过你这是什么角色吗？”  
 “没有。虽然我问了好多次，可是每次都被她岔开话题。”  
 “哈哈……我想也是。”  
 “所以我一直很在意的哟。冈部你知道吗？”  
-“嗯~嘛……”  
+“嗯\~嘛……”  
 “冈——部————”  
 手机里传来怨灵一般的声音，背后升起一股寒气。  
 “我也……不知道啊。啊哈哈……”  
@@ -139,7 +139,7 @@
 “运气比较好。送给你当礼物了。”  
 “可以吗？”  
 “我拿着也没用。”  
-“是吗？那么，我就不客气的收下了。呵呵~”  
+“是吗？那么，我就不客气的收下了。呵呵\~”  
 比屋定像幼小的少女一样露出无邪的表情，抱紧玩偶。看她这么高兴，我也变开心了。  
 “……红莉栖逝去之后呢，我从她的母亲那里收到了各种遗物。  
  但是，因为说这个是红莉栖非常喜欢的，  
