--- a/article/sg0/doc/0034.md
+++ b/article/sg0/doc/0034.md
@@ -120,7 +120,7 @@
 “桶子已经破解了吗？”  
 “还没有。所以我才想在返回美国之前，最后再找你谈上一次。”  
 所以才会让我带路到这里来吗。立刻联络桶子吧。内心的急躁让我没有耐心打字，于是直接拨通了桶子的电话。  
-“喂？你好你好~”  
+“喂？你好你好\~”  
 “现在在 LAB 吗？”  
 “嗯啊？没有。”  
 “那你在哪儿？”  
