--- a/article/sg0/doc/0037.md
+++ b/article/sg0/doc/0037.md
@@ -73,24 +73,24 @@
 “等等，请不要说奇怪的话。话说，甜蜜小秘密是什么？”  
 “是什么呢？”  
 一副装傻的表情。红莉栖偶尔也会有这样调皮的一面，又可恨又可爱。  
-“嗯~比如……在游戏中心，‘他’帮你拿到玩偶的事……你以为我没有察觉吗？”  
+“嗯\~比如……在游戏中心，‘他’帮你拿到玩偶的事……你以为我没有察觉吗？”  
 “……哈？！”  
 游戏中心，听到这个单词真帆脑中立马浮现出在日本秋叶原发生的事情。真帆挑战很多次都没有拿到的玩偶，被冈部轻易的拿到，当作礼物送给了真帆。  
 “那个怎么了？”  
 “一直放在前辈的床上对吧？”  
 “你、你在说什么蠢话？！……那是给红莉栖母亲的礼物哟。”  
-“嘿嘿~那么~为什么会在前辈的房间里呢~？”  
+“嘿嘿\~那么\~为什么会在前辈的房间里呢\~？”  
 “因、因为，伯母说正在找新的房子，在此之前租住在临时公寓，  
  想着到时候要搬家的话，给她增加行李就不好了……”  
-“真的是这样~？”  
+“真的是这样\~？”  
 “真、真的哟！再说，那个玩偶对我来说，是对红莉栖珍贵的回忆。  
  抱着睡觉有那么奇怪吗？”  
-“啊哈~果然在前辈的床上呢，那个！  
+“啊哈\~果然在前辈的床上呢，那个！  
  而且，抱着睡觉什么的，太可爱了！  
  关于这个，请再讲的详细一点！”  
 “咕唔！”  
 区区程序居然自大到给我下套——真帆察觉到这点的时候，已经晚了。“红莉栖”和一直听着对话的雷斯吉宁教授都一脸奸笑地看着真帆。  
-“呜哼~哼~~”  
+“呜哼\~哼\~\~”  
 真帆红着脸瞪着这两人。  
 “这样看起来，是 *‘Kurisu’* 的胜利呢。”  
 “胜、胜负什么的一点关系也没有！我要睡觉去了，晚安！”  
@@ -106,7 +106,7 @@
 “最近，因为共同研究，日本方面又要叫我过去。  
  到时候，还想着要联系下 *Rintaro* 呢。  
  我还在烦恼是否要带上 *Maho* 一起去的，  
- 这样子看起来还是算了吧~”  
+ 这样子看起来还是算了吧\~”  
 “诶！？又要去日本吗！？”  
 这件事真帆完全是第一次听说。通常雷斯吉宁教授的项目的相关信息，都会事前通过研究所的内网通知自己的。  
 “啊。”  
