--- a/article/sg0/doc/0041.md
+++ b/article/sg0/doc/0041.md
@@ -7,7 +7,7 @@
 “话说，你跟妈处得还好吗？”  
 “嗯啊？”  
 “没问题吗？不会演变成我无法出生的情况吧？”  
-“啊~怎么说~？这件事比制作时间机器还难吗？”  
+“啊\~怎么说\~？这件事比制作时间机器还难吗？”  
 “喂——！”  
 铃羽忍不住逼近了桶子。  
 “别搞砸了啊！爸爸！”  
@@ -23,7 +23,7 @@
 <abbr title="作认真状">*Kiri！*</abbr>”  
 “所以呢？你自己有采取什么行动了吗？”  
 “……”  
-“啊~这样不行啊。”  
+“啊\~这样不行啊。”  
 确实，这方面的问题说不定真的比时间机器的问题严重。铃羽感到头痛。  
 “听好了，爸爸，我没办法一直对你说教下去知道吗？我也马上就要离开了哦？”  
 “啊……”  
@@ -75,7 +75,7 @@
 ![](../img/0013-2.png)
 
 “妈妈！！”  
-“这是妈妈一直很珍惜的乌帕钥匙圈哦~给你，要好好保管呐。”  
+“这是妈妈一直很珍惜的乌帕钥匙圈哦\~给你，要好好保管呐。”  
 
 “……啊！！”  
 铃羽不禁倒吸一口气，后背激起一阵难以名状的战栗。  
@@ -246,7 +246,7 @@
 <abbr title="os：这部分难道不值得一张 CG 吗 @5pb">
 确实，现在的铃羽像是穿着一件迷你连衣裙一样。T 恤从肩膀滑了下来，差点露出胸部；下摆也卷了起来，几乎要被窥见隐秘部位了。  
 </abbr>
-“嘛，痴女也蛮对我胃口的，不得不说不修边幅的裸体单穿 T 恤造型相当不错的。嘿~嘿~”  
+“嘛，痴女也蛮对我胃口的，不得不说不修边幅的裸体单穿 T 恤造型相当不错的。嘿\~嘿\~”  
 “又在说这样的胡话。你刚才搞不好就受重伤了。”  
 铃羽不满地抱怨着，桶子却摇了摇头：  
 “我啊，虽然那时候看见刀忍不住叫了出来，不过想想其实没有必要害怕……  
