--- a/article/sg0/doc/0042.md
+++ b/article/sg0/doc/0042.md
@@ -78,7 +78,7 @@
 “我并不是这个意思啦。”  
 “说到底，都怪冈部说了奇怪的话呢……”  
 “是这样么？『栗悟饭和龟派气功』。”  
-“哇~啊——啊~~求你别再说了。”  
+“哇\~啊——啊\~\~求你别再说了。”  
 异常拼命地想要隐藏作为 @cher 的这一事实，和原版并无差别。  
 “我要稍微冷静下，先挂了啊。失礼了……”  
 “红莉栖”从画面上消失了。  
