--- a/article/sg0/doc/0043.md
+++ b/article/sg0/doc/0043.md
@@ -3,7 +3,7 @@
 > [ 2011/07/03 铃羽视角 ] 桶子和由季约会。  
 
 GOGO 咖喱店，虽说是周日，到了下午两点，用餐的高峰也已经过去，店内用餐的客人占据了差不多一半的座位。在这当中——铃羽坐在最里面的座位，把鸭舌帽檐压得很低藏住脸，认真地观察着坐在不远处的一对情侣客人。  
-“久等了，超大份咖喱来了~！”  
+“久等了，超大份咖喱来了\~！”  
 店员伴随着充满活力的声音，在那对情侣的眼前，咚的放下两个巨大的银色盘子——应该说是盆。其他客人看到这一场景开始骚动，毕竟这对情侣太引人注目了。虽然男方是符合超大份咖喱印象的巨汉，但是女方却是一位苗条温柔的美女。无论是这对情侣的组合，或是美女和超大份咖喱的组合，都非常的不平衡。超大份咖喱总之就是分量大，超大。铃羽根据经验很清楚这一点。巨大的银色盘子装满了米饭和咖喱，在这之上还放着两块巨大的炸猪排、炸虾还有香肠，以及煮鸡蛋和堆得像小山一样的卷心菜。是比一般套餐多了两到三倍的咖喱，配以所有配菜的怪物级套餐。就算是食欲旺盛的年轻男性客人，要吃完这个也并不是一件容易的事情。 
 （究竟为什么，第一次约会的午饭要选超大份咖喱啊，爸爸？）  
 铃羽感觉有些焦躁。她观察着的美女与野兽的情侣组合，毫无疑问就是桶子和由季。  
@@ -16,12 +16,12 @@ GOGO 咖喱店，虽说是周日，到了下午两点，用餐的高峰也已经
 “诶、我说，那个……阿万音氏……如果吃不完的话，那个……就交给我来帮你解决吧……”  
 “好，谢谢啦。不过，别看我这样，也相当能吃的哟？”  
 “是、是吗……真想不到哦。”  
-“嘿嘿嘿~实际上，我一直在店外看着这个菜单……想要吃上一次呢。  
+“嘿嘿嘿\~实际上，我一直在店外看着这个菜单……想要吃上一次呢。  
  能带我来这里，我很高兴。”  
 “那，那真是太好了哦。”  
 看来铃羽是多虑了。然而她又察觉到父亲的样子有些奇怪。话说自从电影院出来之后，说话方式和走路姿势就变得很别扭。一直弯着的背，也勉强挺了起来。总之一举一动都很僵硬，像破烂的机器人一样。而且，用这危险的动作往杯子里倒了许多次水，一杯接一杯地灌进肚子里。  
 “啊，不好意思。也请帮我倒一杯水……”  
-“哈？好的好的~请用~”  
+“哈？好的好的\~请用\~”  
 “十分感谢。”  
 看着父亲往由季的杯子里倒水的动作，铃羽心中涌起了不详的预感。结果不出所料，动作生硬的他差点把水倒在了由季的手上。  
 “呀……！”  
@@ -43,11 +43,11 @@ GOGO 咖喱店，虽说是周日，到了下午两点，用餐的高峰也已经
 “唔……”  
 果然，和由季完全对上视线了。  
 “铃羽！你也在啊？”  
-“啊——那个……嗯~真巧呢~由季小姐，还有哥哥……”  
+“啊——那个……嗯\~真巧呢\~由季小姐，还有哥哥……”  
 “打声招呼也好啊。”  
-“不，完全没注意到啊~”  
+“不，完全没注意到啊\~”  
 虽然现在应该果断离开店里，但是却做不到放着眼前的超大份咖喱不吃而离开。对于经历过战争时代的铃羽来说，浪费食物是绝对不能被原谅的事情。在由季和父亲的视线下，她不得已拿起勺子。  
-“嘛，就是这样的~两位请慢用……”  
+“嘛，就是这样的\~两位请慢用……”  
 事已至此，只有争分夺秒地赶紧吃完面前的超大份咖喱离开，也为了不打扰那两个人！但是——与铃羽的觉悟相反，由季迈着小碎步轻快地接近，一下端走了铃羽的咖喱。  
 “啊……？”  
 “那个，抱歉，店员先生？这是我的朋友，能换一个位置吗？”  
@@ -56,7 +56,7 @@ GOGO 咖喱店，虽说是周日，到了下午两点，用餐的高峰也已经
 “等等等……等等？为啥？”  
 “要说为啥……你看，铃羽小姐你不也点的超大份咖喱嘛，我想着这次务必来场比赛呢。”  
 “哈！？”  
-“裁判就请桥田来担任吧~”  
+“裁判就请桥田来担任吧\~”  
 然后，不等回答，由季就把铃羽的咖喱拿到了自己旁边的座位。  
 “不，我说？！”  
 铃羽只得移动到两人旁边，凑到由季耳边小声说：  
@@ -66,7 +66,7 @@ GOGO 咖喱店，虽说是周日，到了下午两点，用餐的高峰也已经
 父亲毫无反应。刚才的对话他应该听到了的。  
 “那个，因为我没有约会过所以不太了解不过……  
  ……约会中，会和其他女生进行咖喱速食比赛吗？”  
-“这个嘛，谁知道呢~但是，你看，动画啊漫画之类的，不是有这样的情节吗？  
+“这个嘛，谁知道呢\~但是，你看，动画啊漫画之类的，不是有这样的情节吗？  
  不想哥哥被抢走的妹妹，对他的女朋友喊道‘来决一胜负吧！’这样的。”  
 不知为何，由季在说这些话的时候，特别充满干劲，眼神闪闪发光。铃羽被她的气势压倒了。  
 “不、不知道啊……是这样的吗，哥哥？”  
@@ -107,7 +107,7 @@ GOGO 咖喱店，虽说是周日，到了下午两点，用餐的高峰也已经
 “嘛……嗯。”  
 虽然有很多看不惯的地方，但是毫无疑问，铃羽是非常喜欢父亲的。  
 “等等，我喜不喜欢都无所谓吧？”  
-“呀嘿嘿~”  
+“呀嘿嘿\~”  
 “那么，由季小姐呢？”  
 “我……还不太清楚是不是喜欢……”  
 “……是、是么。”  
@@ -133,7 +133,7 @@ GOGO 咖喱店，虽说是周日，到了下午两点，用餐的高峰也已经
 
 “啊——！怎么办啊！这样下去就是分手危机了啊！虽然还没有开始！”  
 ——铃羽回到 LAB，就忍不住怒斥着一脸消沉的父亲。  
-“呜哦~铃羽对不起啊~桥田家已经不行了嗷——！”  
+“呜哦\~铃羽对不起啊\~桥田家已经不行了嗷——！”  
 “别就这么气馁啊！这可不是闹着玩的！  
  总之，对于今天为什么表现成那样，给我好好解释一下。  
  早上出发的时候不是还挺开心的吗？妈妈也说了，看电影过程中也挺正常的。”  
@@ -161,9 +161,9 @@ GOGO 咖喱店，虽说是周日，到了下午两点，用餐的高峰也已经
 不如说，从由季的言行看来，她似乎是认为自己做了失礼的事而被讨厌了所以闷闷不乐。  
 问题是，那时她说的话——“我，到底想怎么样呢……”——究竟是想表达什么呢？  
 “真搞不懂妈妈……”  
-“铃羽啊~事到如今就放弃妈妈，我们两个人好好生活下去吧~！”  
+“铃羽啊\~事到如今就放弃妈妈，我们两个人好好生活下去吧\~！”  
 “不要胡说八道啊！再说了，我要怎么出生啊！”  
-“呜…但是我做不到啊~！”  
+“呜…但是我做不到啊\~！”  
 “爸爸不努力怎么行？！要把这此危机转换为机会啊！”  
 铃羽抓着亲生父亲的衣襟，摇晃着那巨大的身体。  
 “不然的话——”  
