--- a/article/sg0/doc/0044.md
+++ b/article/sg0/doc/0044.md
@@ -30,7 +30,7 @@
 “参观……吗？”  
 “如果时机合适的话，旅费我来出，要不要来看看啊？”  
 “能为我考虑这么多……非常感谢！”  
-“当然，我下一次什么时候回美国，具体时间还无法确定呢，*HAHAHA~*”  
+“当然，我下一次什么时候回美国，具体时间还无法确定呢，*HAHAHA\~*”  
 “好的！”  
 我低头鞠躬，打从心底里表示感谢。能与这个人相遇，是我人生的一大幸运。  
 “…………”  
