--- a/article/sg0/doc/0045.md
+++ b/article/sg0/doc/0045.md
@@ -182,8 +182,8 @@ NSC
  只要在不久的将来把记忆数据载入你的脑内，你就能从崩坏中回复过来呢。  
  你也参加了我的演讲，应该理解的吧？”  
 “………………”  
-“首先获取记忆数据，接下来就要请你告诉我各种各样的情报啦~  
- 要变得忙起来了呢~来，放轻松，不然没法正常获取数据呢~”  
+“首先获取记忆数据，接下来就要请你告诉我各种各样的情报啦\~  
+ 要变得忙起来了呢\~来，放轻松，不然没法正常获取数据呢\~”  
 “雷斯吉宁……！你这混蛋……！！”  
 “就算你摆出这张脸，也不会有人来救你的。  
  这是可是我们 STRATFO 的管辖场所呢。  
