--- a/article/sg0/doc/0052.md
+++ b/article/sg0/doc/0052.md
@@ -97,7 +97,7 @@
 「她们会叫警察来抓你的」  
 『对吧  
  所以我无奈之下才来问冈伦你啊！！！  
- 那，选什么颜色？别害羞说一下嘛~ 来嘛~~』  
+ 那，选什么颜色？别害羞说一下嘛\~ 来嘛\~\~』  
 「你直接去问铃羽吧」  
 『绝 对 不 可 能  
  会被杀掉的』  
