--- a/article/sg0/doc/0054.md
+++ b/article/sg0/doc/0054.md
@@ -39,9 +39,9 @@
 当然，我并不把这视为赎罪。  
 “谢谢。”  
 
-“真由喜的<abbr title="注：“幼女”和“养女”同音">幼女</abbr>怎么了吗~？”  
+“真由喜的<abbr title="注：“幼女”和“养女”同音">幼女</abbr>怎么了吗\~？”  
 突然，在极近距离处传来声音，全员一齐向看过去。  
-“嘟嘟噜~♪冈伦，真的在这等着呢！”  
+“嘟嘟噜\~♪冈伦，真的在这等着呢！”  
 真由理……  
 “……？怎么了？”  
 看到真由理，我终于感到了安心。  
@@ -58,9 +58,9 @@
 不妙。虽然真由理知道铃羽是从未来过来的，但是突然听到未来的女儿这种事的话刺激是在是太强烈了。一定要想办法糊弄过去。  
 “真、真由理看起来还很年幼——所以被称为幼女，对吧桶子？”  
 “诶？啊，没错没错。真由喜像幼女一样可爱！”  
-“嗯，经常被人说是娃娃脸呢~虽然我本人是想变得像由季那样成熟的感觉呢。”  
+“嗯，经常被人说是娃娃脸呢\~虽然我本人是想变得像由季那样成熟的感觉呢。”  
 “可能只有食量这一点像真正的大人吧。”  
-“诶嘿嘿~”  
+“诶嘿嘿\~”  
 这并不是在夸你啊，真由理。总之，总算糊弄过去了。  
 “对了。说到吃的，冈伦在圣诞节有什么想吃的吗？”  
 “圣诞？是说派对的事情吗？”  
