--- a/article/sg0/doc/0060.md
+++ b/article/sg0/doc/0060.md
@@ -76,7 +76,7 @@
 “真帆，接下来有什么打算？”  
 “我……”  
 比屋定没有说出口，只是看着我。莱耶丝教授好像察觉到了什么。  
-“嗯哼？原来如此，这么回事啊！那么，我先走了。伦太郎，之后找个机会聊聊吧。*Bye~！*”  
+“嗯哼？原来如此，这么回事啊！那么，我先走了。伦太郎，之后找个机会聊聊吧。*Bye\~！*”  
 她抛了个意味深长的媚眼之后离开了。不过走向了与车站相反的方向，没关系吧？话说，感觉又被奇妙地误会了的样子，不过一一总是反驳也嫌麻烦。  
 
 ![](../img/0060-2.png)
@@ -149,14 +149,14 @@
 在 LAB 时与真由理在 RINE 上的聊天记录：
 『呐，冈伦今天准备什么时候回家？』  
 「嗯？有什么事吗？」  
-『遇到伯母了，晚饭拜托给我了~』  
+『遇到伯母了，晚饭拜托给我了\~』  
 「![](../img/emoji/okarin-ha.png)」  
 『伯母被叫去商店街的会议了，正在烦恼晚饭该怎么办  
- 我说“由真由喜来做吧~”，伯母说“拜托了——”』  
+ 我说“由真由喜来做吧\~”，伯母说“拜托了——”』  
 「没问题吗？真由理你也很忙吧，不要勉强」  
-『完全没问题哦~我会做很好吃的东西，你早点回来哦~♪』  
+『完全没问题哦\~我会做很好吃的东西，你早点回来哦\~♪』  
 「是么？真的？真没问题？」  
-『等着你哦~』  
+『等着你哦\~』  
 
 
 <br/>
