--- a/article/sg0/doc/0061.md
+++ b/article/sg0/doc/0061.md
@@ -3,17 +3,17 @@
 > [ 2010/12/23 ] 圣诞节不办派对了，改为新年派对。琉华子带陌生失忆女性来 LAB 找冈伦求助，女性长得非常像红莉栖。  
 
 从桐生萌郁那里听到关于椎名篝的报告之后，又过了几天。昨晚确认了一下，据说那之后的调查就没有新进展了。桐生萌郁也有杂志社的校对工作，没有太多时间吧。虽然对寻找椎名篝的家伙感到不安，但也不能让她把原来的业务放下，优先忙这边的事情吧。  
-“哈呜~真由喜非常伤心……”  
+“哈呜\~真由喜非常伤心……”  
 “嗯？难道是圣诞节派对的事情吗？”  
 “嗯。枫和吹雪酱，有事情了不能来了。  
- 菲莉丝酱也要忙着工作，绹酱也要和店长一起过~  
+ 菲莉丝酱也要忙着工作，绹酱也要和店长一起过\~  
  桶子说要和由季一起去玩。”  
 “不是挺好吗。”  
 据说铃羽为此做了许多准备。她一直抱怨为什么桶子不能对由季有个明确的态度。对铃羽来说，这可是有关自身存在的事情。虽说是注定的关系，但也可能因为一些原因而发展不顺利。而且铃羽也想看看，在这个和平年代里，父亲母亲相亲相爱的样子。如果能以此为契机有所进展的话，她也会比较放心吧。  
 “真由理圣诞节也在家过比较好吧？前阵子叔叔订了蛋糕哦。”  
-“你见过爸爸了~？”  
+“你见过爸爸了\~？”  
 “在家附近偶然遇到的。说是为了给真由理惊喜，一鼓作气订了一个大蛋糕。”  
-“这样啊……嗯~那，还是回家吧。”  
+“这样啊……嗯\~那，还是回家吧。”  
 “啊，话先说前面，刚才的话当作没听见吧，难得叔叔给你的大惊喜。”  
 “嗯，我知道啦。但是冈伦圣诞节要怎么办？”  
 “没有什么特别的计划啊。我家本来就是不会过这类节日的。”  
@@ -21,15 +21,15 @@
 “没记错的话，你说了想要圣诞老人的礼物之后，结果早上起来枕头旁边放了蔬菜对吧？”  
 “不管怎么看都是昨天卖剩的。抱怨之后，还反过来教训说我们家又不信基督教。”  
 仔细想想，那种教育下真亏我没有踏入歪门邪道啊。……不过，也很难说我所走过的路有多正经。  
-“圣诞节过完了之后，有 CM，然后就是正月了。一年一眨眼就过去了呢~”  
+“圣诞节过完了之后，有 CM，然后就是正月了。一年一眨眼就过去了呢\~”  
 “是啊……”  
 也不能说是一眨眼吧。因为我，无数次地重复了那个时间。不如说是非常漫长的一年。  
 “对啦！呐，冈伦。虽然圣诞节派对不能开了，但是开新年派对怎么样？  
- 大家一起去参拜~然后一起吃年夜饭~说今年也请多指教~”  
+ 大家一起去参拜\~然后一起吃年夜饭\~说今年也请多指教\~”  
 “……啊，挺好的嘛。”  
-“对吧对吧~嗯，之后要问问大家呢~”  
+“对吧对吧\~嗯，之后要问问大家呢\~”  
 真由理那么说着，缓缓的站了起来。
-“那么，真由喜接下来要去买东西了~”  
+“那么，真由喜接下来要去买东西了\~”  
 “买东西？”  
 “嗯。吹雪酱的 cos 服，突然需要一个小物件。”  
 “这样啊，路上小心哦。”  
@@ -38,7 +38,7 @@
 “啊……”  
 说起来，之前琉华子打过一个电话。那时桐生萌郁来访，还发生了很多的事，让我完全把这件事抛诸脑后了。如果是琉华子，可能因为我那句“之后再联络”的关系，而一直在等着电话也不一定。  
 “我知道了，我会打电话过去的。”  
-“嗯，拜托了~那，我出门啦~”  
+“嗯，拜托了\~那，我出门啦\~”  
 真由理穿上了外套，向我挥了挥手出去了。  
 
 那，给琉华子打电话吧。话说回来……要商量什么呢？不会又说想变成女孩子……之类的话吧。不，怎么说也不会是这个吧。那是因为电话微波炉（暂定）的存在，才第一次听到的请求。那到底是……算了，问问就知道了。  
