--- a/article/sg0/doc/0062.md
+++ b/article/sg0/doc/0062.md
@@ -41,12 +41,12 @@
 “啊咧？莫非是有客人来了？”  
 加奈打开手绢包的同时，玄关传来了真由理柔和的声音。应该是买完东西回来了吧。她身后跟着铃羽。好少见的组合啊，是在来这里的路上汇合的吗？  
 “啊，真由理酱。”  
-“啊~ 琉华君！”  
+“啊\~ 琉华君！”  
 “琉华哥，那位是？”  
 “那个，是住在我家的客人……”  
 “……”  
 加奈微微低头行礼。  
-“哇啊~”  
+“哇啊\~”  
 真由理不知道为什么用着很高兴的音调，看着加奈手绢里的东西。  
 “那个，是乌帕吧？”  
 “啊……”  
@@ -54,18 +54,18 @@
 
 ![](../img/0062-1.png)
 
-“你喜欢乌帕吗？真由喜也是，最~喜欢乌帕了~~”  
+“你喜欢乌帕吗？真由喜也是，最\~喜欢乌帕了\~\~”  
 “…… ”  
 “难道，这就是线索吗？”  
 老旧的乌帕钥匙圈，这样的东西能当作线索吗？  
 “但是，这个乌帕，是什么时候的东西呐？好像很旧的样子……”  
 这么一说确实如此……乌帕是《雷 NET 翔》这部动画的吉祥物，其商品问世，也只是数年前的事。但是眼前的乌帕，看起来已经有相当的年份了。  
-“这个，原来不是绿色的嘛？因为这个是‘森之妖精先生’版本的嘛~”  
+“这个，原来不是绿色的嘛？因为这个是‘森之妖精先生’版本的嘛\~”  
 “森之妖精先生？”  
-“嗯~之前放映的电影里出现过。看~真由喜也有这个~但这里的设计有点不一样。”  
+“嗯\~之前放映的电影里出现过。看\~真由喜也有这个\~但这里的设计有点不一样。”  
 即使她用手指着，我也完全不清楚哪里不一样。  
-“这个钥匙圈啊，一直买不到，所以一~直在找它呢。  
- 然后不久之前，琉华君发现后买给我了~呐？”  
+“这个钥匙圈啊，一直买不到，所以一\~直在找它呢。  
+ 然后不久之前，琉华君发现后买给我了\~呐？”  
 “嗯，偶然看到店里有卖……”  
 “但是好奇怪啊。之前的电影商品的话，应该是在不久之前发售的啊。为什么这么旧……嗯？”  
 “唔……！”  
