--- a/article/sg0/doc/0063.md
+++ b/article/sg0/doc/0063.md
@@ -10,7 +10,7 @@
 “诶？”  
 “还有，贴在额头的那种降温贴也麻烦你们买点吧。”  
 虽然对琉华子很抱歉，但是这个话题不太想让他们俩听到。  
-“嗯，知道了~琉华君，走吧？”  
+“嗯，知道了\~琉华君，走吧？”  
 “啊……嗯……”  
 琉华子虽然很在意这边的话题，不过还是听真由理的话一起去买东西了。真正的问题从现在才开始。  
 “加奈小姐——”  
@@ -67,7 +67,7 @@
 钥匙圈应该是篝的东西。但也可能是她从椎名篝那里拿到的，或者是捡到的。不过，据铃羽所说，篝很爱护这个钥匙圈。不说遗失掉，应该也完全不可能交给别人。这样说来，果然……  
 
 这时，入口的门打开，真由理像是要先刺探一下情况般探进了头，招牌的招呼声也显得小心翼翼。  
-“……嘟嘟噜~♪？”  
+“……嘟嘟噜\~♪？”  
 “那个……没事……吧？”  
 “啊……不好意思，麻烦你们特地跑一趟。”  
 “没事……”  
@@ -92,11 +92,11 @@
 “是、是！”  
 “篝小姐的姓是什么呢？刚才没有听到，所以，可以的话能告诉我吗？”  
 “那个……根据冈部先生他们说的……应该是……椎名……”  
-“哇！那不是，和真由喜一样呢~真由喜，也姓椎名呢——椎名真由理。”  
+“哇！那不是，和真由喜一样呢\~真由喜，也姓椎名呢——椎名真由理。”  
 “椎名……真由理小姐……”  
-“嗯！好开心啊~真由喜，这还是第一次，遇到同样姓氏的人呢~”  
+“嗯！好开心啊\~真由喜，这还是第一次，遇到同样姓氏的人呢\~”  
 “是吗……”  
-“嗯。所以，之后请多关照~”  
+“嗯。所以，之后请多关照\~”  
 “好、好的。我才是，请多关照。”  
 真由理天性乐于亲近人，很容易就和篝相处融洽了。顺利的话，可能有什么契机让篝恢复记忆也不一定。  
 “我从琉华君那里听说，篝失去了记忆……是吗？”  
@@ -105,12 +105,12 @@
 “是……”  
 “是吗……一定，很辛苦吧？  
  因为，连自己最喜欢的人的事情也会忘记吧？  
- 这是，非常非~常悲伤的事情，真由喜是这么想的。  
- 所以呢，那个……虽然不知道该怎么说，真由喜也会帮忙的，加油啊~！”  
+ 这是，非常非\~常悲伤的事情，真由喜是这么想的。  
+ 所以呢，那个……虽然不知道该怎么说，真由喜也会帮忙的，加油啊\~！”  
 真由理莞尔一笑。篝看见这个笑容，眼角瞬间湿润了。  
 “哇啊，突然怎么了？真由喜，说了什么奇怪的话吗？”  
 “……不……不是……只是，听到真由理小姐的话……不由自主……非常开心……”  
-“不只是真由喜，冈伦、铃小姐、琉华君，大家都是一样的心情哟~”  
+“不只是真由喜，冈伦、铃小姐、琉华君，大家都是一样的心情哟\~”  
 “嗯！当然了！我也是，如果有能做的事情，我什么都会做的！”  
 “十分感谢……琉华君，真由理小姐。”  
 感觉，把篝的事情交给真由理和琉华子就没问题了。问题是接下来该怎么办……  
@@ -128,7 +128,7 @@
 “好！”  
 “铃羽也尽量多去露露脸。这样对恢复记忆应该有好处。”  
 “*Okey-dokey!*”  
-“对了！那个呢，因为没法办圣诞派对，于是我考虑办新年派对！要是篝也能来帮忙的话就好了呢~”  
+“对了！那个呢，因为没法办圣诞派对，于是我考虑办新年派对！要是篝也能来帮忙的话就好了呢\~”  
 “诶？可以吗？我这种……”  
 “当然了哦！是吧，琉华君？”  
 “嗯！一起 party 吧。”  
