--- a/article/sg0/doc/0064.md
+++ b/article/sg0/doc/0064.md
@@ -5,19 +5,19 @@
 这是琉华子把篝带到 LAB 后的第二天。穿过浓厚圣诞氛围中的秋叶原街，我和真由理一起前往柳林神社。  
 “啊，真由理酱！还有冈部先生！”  
 还没来得及打招呼，琉华子就发现了我们，绽放笑颜。那是可爱得完全不像是男人的、事到如今还会让人怀疑他性别的笑颜。  
-“琉华君、篝酱，嘟嘟噜~♪”  
-“呵呵，嘟嘟噜~♪desu。”  
+“琉华君、篝酱，嘟嘟噜\~♪”  
+“呵呵，嘟嘟噜\~♪desu。”  
 “哇，篝酱，好棒！”  
 “诶？什么？”  
-“因为，就算真由喜说嘟嘟噜~♪，一开始大家都不肯用嘟嘟噜~♪回我呢。”  
+“因为，就算真由喜说嘟嘟噜\~♪，一开始大家都不肯用嘟嘟噜\~♪回我呢。”  
 “要求初次见面的人理解这是打招呼也太苛刻了。”  
 “嗯。所以明明大家的反应都是‘那是啥？’，篝却很正常地回复了我，真的好棒！”  
 “我、我也没特别……只是莫名觉得应该是那样吧。”  
 说不定真由理独特的招呼已经深深烙在了篝的记忆中。嗯？也就是说……25 年后的真由理还在用“嘟嘟噜”吗？嘛，不愧是真由理，也不是什么奇怪的事。  
-“啊，冈部先生，嘟嘟噜~♪desu。”  
+“啊，冈部先生，嘟嘟噜\~♪desu。”  
 “你好……”
 话说回来，我现在还在烦恼要用什么态度对她。她和铃羽分别时是 10 岁。之后过了 12 年，现在应该是 22 岁。年龄上比我年长，但又是真由理的养女。从这种意义上，立场和桶子的女儿铃羽是相同的。铃羽姑且和我们同岁，就算不用敬语也没有违和感……  
-“啊，对了。今天是圣诞夜呢，圣诞快乐~”  
+“啊，对了。今天是圣诞夜呢，圣诞快乐\~”  
 “说来是呢。圣诞快乐。”  
 “圣诞快乐，desu。”  
 说到底，在神社庆祝圣诞合适吗？
@@ -34,7 +34,7 @@
 从见面起就无精打采的篝，第一次看到了她的笑容。感觉那笑容很孩子气，比理论年龄要年轻许多。  
 “啊，对不起。我真是的，突然这么自来熟……”  
 “不，没关系的。我也没有用敬语说话。”  
-“是呀~真由喜也觉得普通地说话更开心~因为那样才更有好朋友的感觉呀~”  
+“是呀\~真由喜也觉得普通地说话更开心\~因为那样才更有好朋友的感觉呀\~”  
 “好朋友……”  
 “嗯！好朋友。”  
 “谢谢你，真由理酱。嘿嘿，好朋友啊……”  
@@ -89,17 +89,17 @@
 “不，我……”  
 “哈哈哈。装傻也没用，都写在脸上了。”  
 怎么可能。哪怕现在照镜子，也绝不可能写着那种东西。  
-“这样啊……冈伦这么说的话~”  
+“这样啊……冈伦这么说的话\~”  
 “是吗？那就太好了！好，既然决定了，就要多准备几件巫女装了！孩子他妈！”  
 仿佛像取得承诺后怕被反悔一样，琉华父亲匆忙躲回本殿里去了。果然不能小看这个人……  
 “那个……对不住了……”  
 “不，琉华君不用道歉的。”  
 “但是，你期待已久的新年派对就……”  
-“没事~那个可以在这边忙完后再做。”  
+“没事\~那个可以在这边忙完后再做。”  
 “……嗯，也是。我也来帮忙，什么事都可以。”  
 “谢谢，琉华君。”  
 “但是，巫女装什么的，我穿合适吗……”  
-“没问题！篝酱肯定合适呀~”  
+“没问题！篝酱肯定合适呀\~”  
 “是吗？”  
 “嗯！真由喜给朋友做过很多 cos 服，我一看就知道的。”  
 “这么说的话，我就努力一下吧。”  
