--- a/article/sg0/doc/0066.md
+++ b/article/sg0/doc/0066.md
@@ -52,7 +52,7 @@
 “说已经习惯了倒也不对，但我对新年参拜还是有些兴趣的。而且，认识的同龄人变多了也蛮高兴的。”  
 “你能这么说就好。”  
 比屋定还没融入进来，但会随时间解决的吧。  
-吹雪：“呼呼呼，真由喜的 cosplay ，超期待~”  
+吹雪：“呼呼呼，真由喜的 cosplay ，超期待\~”  
 枫：“真是的，吹雪酱，那不是 cosplay ，今天怎么说那都是‘正装’哦……”  
 由季：“很期待铃羽小姐的巫女装呢，是吧桥田？”  
 桶子：“算是吧。虽说妹妹属性的巫女也不错，反正都这样了，要是能加上护士属性就萌爆表了嘛。”  
