--- a/article/sg0/doc/0067.md
+++ b/article/sg0/doc/0067.md
@@ -39,14 +39,14 @@
 “嗯？怎么了喵？”  
 绹：“真由理姐姐在哪？”
 “真由喜？记得刚刚的确是在御神酒那边的……啊，在那喵！  
- 真—由—喜—！快来这边喵！冈伦他们来了喵~！”  
+ 真—由—喜—！快来这边喵！冈伦他们来了喵\~！”  
 因为菲莉丝的呼喊，终于发现我们的真由理，牵着篝的手，一路小跑着过来了。  
 真由理：“啊，冈伦……那个……新年快乐！”  
 篝：“新年快乐，冈部先生。”  
 “啊，新年快乐。”  
 “那个……怎、怎么样，冈伦？这身打扮合不合适啊？”  
 “嗯？啊，超乎想象的合适。”  
-“真的！？诶嘿嘿~太好了。”  
+“真的！？诶嘿嘿\~太好了。”  
 真由理脸上一直挂着的紧张，变得放松了下来。  
 “在 *MayQueen+Nyan²* 活动的时候不也 cosplay 过吗？现在明明就没什么好紧张的啊。”  
 “那个因为是工作所以没关系。”  
@@ -59,9 +59,9 @@
 并不是因为新年的原因才显得很开心，篝在这几天时间里已经完全变开朗了。虽然之前因为失去记忆而不安，看上去战战兢兢的，她本来应该是像现在这样的孩子吧。在和真由理、琉华子一起做新年准备的这段时间里，看样子是开始渐渐找回了一点自己原来的样子。  
 
 枫：“哇，真不愧真由理酱，穿着好合适！”  
-真由理：“是这样吗？稍微有点害羞呢~”  
+真由理：“是这样吗？稍微有点害羞呢\~”  
 吹雪：“嘴上这么说，明明就不会害羞。”  
-真由理：“诶嘿嘿~”  
+真由理：“诶嘿嘿\~”  
 枫：“啊，这位是之前提到的，那个……”  
 篝：“啊，我叫篝，椎名篝。”  
 吹雪：“真的呢，和真由喜是一样的姓氏呢。”  
@@ -75,9 +75,9 @@
 枫：“吹雪酱！”  
 吹雪：“啊，这个……抱歉。”  
 篝：“啊，没什么，别在意，没关系的。”  
-真由理：“呐，冈伦也来这边，真由喜来给你消灾避邪吧~这个叫……那个，那个……叫什么来着？”  
+真由理：“呐，冈伦也来这边，真由喜来给你消灾避邪吧\~这个叫……那个，那个……叫什么来着？”  
 “这叫<abbr title="神道教祭祀时使用的道具。在红淡比的树枝前端挂上纸垂，对着祓除对象挥舞，将秽气从对象身上转移至大币内。">大币</abbr>，真由理酱。”  
-真由理：“对对，大币~”  
+真由理：“对对，大币\~”  
 “为了消灾避邪，首先要先向神明大人双手合十祈祷呢。”  
 篝：“啊，是呢。那么在这之后，我也给你祓除吧。”  
 “好，那就拜托你了。”  
@@ -108,7 +108,7 @@
 “……你啊，明明不久前还在狠狠批评‘红莉栖’，现在却问着同样的事情啊。”  
 “啊……你这么一说还真是。人呐，明明扯上自己就很讨厌，扯上别人就充满好奇。我有必要反省一下。”  
 
-“冈伦~我要用<abbr title="真由理把“大币”搞错了">‘大仁田’</abbr>帮你‘唰唰唰’了！快来~！”  
+“冈伦\~我要用<abbr title="真由理把“大币”搞错了">‘大仁田’</abbr>帮你‘唰唰唰’了！快来\~！”  
 “……稍微失陪一下。”  
 “好的……”  
 “果然……是因为有红莉栖了吗……”  
