--- a/article/sg0/doc/0068.md
+++ b/article/sg0/doc/0068.md
@@ -11,9 +11,9 @@
 真由理和琉华子还没有出来。  
 “我说我说，冈伦，说到换衣服，难道真由喜和琉华氏是在同一地方一起换衣服？”  
 “不，真这样的话很糟糕的吧……”  
-“‘呀，琉华君~，帮我把背上的拉链拉开~’  
+“‘呀，琉华君\~，帮我把背上的拉链拉开\~’  
  ‘这、这怎么可以……我怎么能做这样的事……’  
- ‘琉华君~，这边也拜托你了~  
+ ‘琉华君\~，这边也拜托你了\~  
  里面会不会是这样的对话啊，哈啊——哈啊——”  
 “呐，冈部先生，这人没问题吗？”  
 比屋定和桶子接触才不过数次，很明显对他抱有警戒心。  
@@ -22,7 +22,7 @@
 “应该叫黑客的吧常考！”  
 “黑客？真的吗？”  
 “虽然不能大声宣传，不过确实在干像这一类的事啦，有什么要帮忙的拜托我也是可以的哟。”  
-“哦~这样啊，这样的话……”  
+“哦\~这样啊，这样的话……”  
 “*Oh，NOOO!*”  
 比屋定被突如其来的声音吓到，循声望去，在那里的是……  
 
@@ -41,7 +41,7 @@
 “*That's enough!* 双方都有错。”  
 “*Hmm……*”  
 两人没有隐藏失落的情绪，垂头丧气地开始望向神社。这时真由理和琉华子刚好从里面走出来。  
-“久等了，冈伦~”  
+“久等了，冈伦\~”  
 “有点久呢，真由理。”  
 “嗯。琉华君的妈妈呢，给了好多年节菜哦，说是跟大家一起吃！”  
 “妈妈说把这个带过去，这个也带过去……等重新打包好已经到这个时间了。真是抱歉。”  
@@ -57,12 +57,12 @@
 “*Please come with me. I'll show you how to do.*”  
 雷斯吉宁教授和莱耶丝教授在琉华子的带领下前去参拜了。虽然觉得会不会有什么宗教问题，但既然他们本人都不介意的话，旁人也没什么好说吧。比起这些……  
 “琉华子……好厉害啊……没想到英语说得那么好……”  
-“因为琉华君很聪明呢~”  
+“因为琉华君很聪明呢\~”  
 是……这样子吗。  
 “而且，因为来秋叶原观光的人很多，为了能应对别人的问题，用功学习过呢。”  
 我还是第一次知道琉华子这一令人意外的一面。  
 “说起来，真由理，篝怎么样了？”  
-“啊咧？差不多该出来了……啊，来啦来啦，快看~”  
+“啊咧？差不多该出来了……啊，来啦来啦，快看\~”  
 “抱歉，久等了。”  
 这样就全员到齐了呢。接下来就只要等琉华子那边的事情结束——  
 “*Thanks a lot. We had a wonderful experience!*”  
@@ -87,14 +87,14 @@
 虽然途中由季独自离开了,但我们回到 LAB 的人数还是比来时多了一倍。  
 真由理：“那么再正式来一次……新年快乐！”  
 大家：“新年快乐！”  
-真由理：“嗯~琉华君家的年菜，好好吃啊~”  
+真由理：“嗯\~琉华君家的年菜，好好吃啊\~”  
 琉华子：“真的？我和篝都帮忙做了，你这么说我真是太高兴了。”  
-篝：“嗯~哼！没啦，我其实只是帮忙装盘的。”  
+篝：“嗯\~哼！没啦，我其实只是帮忙装盘的。”  
 绹：“我超喜欢这个甜鸡蛋烧！圆圆哒滑滑哒！”  
 桶子：“这边的杂煮也是超绝品。铃羽，怎么样？”  
 铃羽：“嗯，很美味。”  
 菲莉丝：“这其实是 *MayQueen+Nyan²* 的正月菜单喵！”  
-桶子：“呜呼！弹弹的软软的，有菲莉丝碳的味道哦~”  
+桶子：“呜呼！弹弹的软软的，有菲莉丝碳的味道哦\~”  
 吹雪：“桥田先生真是个 HENTAI 呢。”  
 经过一整天已经看够桶子的变态行为了吧，现在吹雪对桶子的吐槽几乎已经变成机械式的了。要吐槽这家伙的所有变态行为也是够累的。  
 比屋定：“在美国马上就会被告性骚扰哦。”  
@@ -109,7 +109,7 @@
 绹：“这个、那个……我吃不了那么多啦。”  
 篝：“不用着急，慢慢咀嚼再吃下去。”  
 琉华子：“呵呵，篝像妈妈一样呢。”  
-真由理：“诶~嘿嘿，果然人多才高兴呢，冈伦。”  
+真由理：“诶\~嘿嘿，果然人多才高兴呢，冈伦。”  
 “嗯，是啊。”  
 上次这么热闹是多久以前了啊……不，那是α世界线的事——也就是说，在我们所处的β世界线上，还是第一次这样热闹。  
 
