--- a/article/sg0/doc/0072.md
+++ b/article/sg0/doc/0072.md
@@ -3,7 +3,7 @@
 > [ 2011/01/02 ] 冈伦查看萌郁手臂排除其嫌疑。随后与天王寺交涉，道破其身份，以铃羽、篝二人在店里打工交换他关照二人，达成合作。发现袭击者使用神秘暗号 K6205，从 5 的读法判断可能来自西方军队。  
 
 与真由理的 RINE 聊天记录：  
-『冈伦，冈伦，不得了了呢~？』  
+『冈伦，冈伦，不得了了呢\~？』  
 「怎么了，发生什么事了？」  
 『昨天不是发生那种事情了吗？  
  所以呢，刚才和绹酱用 RINE 聊了聊  
@@ -23,7 +23,7 @@
 『第四个是  
  想要个望远镜』  
 「这算是梦想吗？」  
-『说是最近为了能看星星在期待呢~』  
+『说是最近为了能看星星在期待呢\~』  
 「是不是受了真由理的影响呢」  
 『![](../img/emoji/bear-zenyang.png)』  
 『她好像也对宇宙充满了兴趣  
@@ -91,9 +91,9 @@
 “爸……爸？”  
 敏感地觉察到父亲态度的变化，绹靠过来窥探着父亲的样子。  
 “怎么了……？”  
-“嗯？绹怎么突然这么问呀~？”  
+“嗯？绹怎么突然这么问呀\~？”  
 “因为突然，爸爸脸上的表情变得很吓人……”  
-“是吗？爸爸跟平时一样啊~瞧~”  
+“是吗？爸爸跟平时一样啊\~瞧\~”  
 “……嗯。”  
 “好啦，知道的话就当个乖宝宝的去外面——啊，不不，在那边看看电视什么的，好吗？”  
 “……嗯。”  
