--- a/article/sg0/doc/0073.md
+++ b/article/sg0/doc/0073.md
@@ -98,7 +98,7 @@
 “桶子，那个克歇尔编号，最多到多少？”  
 “嗯……我看看……最后是 626 号的《安魂曲》。”  
 “莫扎特在弥留之际写的曲子呢……”  
-“枫酱知道好多啊~”  
+“枫酱知道好多啊\~”  
 “因为，我弹钢琴的嘛……”  
 “那么 K620 号是什么曲子呢？”  
 “620…620……啊，有了，好像是叫《魔笛》的曲子。”  
