--- a/article/sg0/doc/0075.md
+++ b/article/sg0/doc/0075.md
@@ -10,14 +10,14 @@
 
 曾经体验的次数已经多到记不得的那份目眩感，又一次发生在了我的身上。我就这样，以紧握着手机的姿势站在房间的正中间。不会错的，刚才，*Reading·Steiner* 发动了，意味着世界线发生了变动了。但是，为什么？是什么原因导致变动的？是因为那条来自『Amadeus』的联络吗？不，原因什么的之后再调查，现在需要的是，弄清楚当下的情况。  
 我迅速环视了 LAB 内部。气氛一如既往，不过，好几个人的身影消失了。不在的人有……枫、吹雪、还有菲莉丝；桶子还是万年不变地占领着电脑前的阵地；接着是真由理，正在厨房冲着速溶咖啡，然后趁着还有热气，把咖啡递给了坐在沙发上的比屋定。  
-“真帆小姐，来，你的咖啡，喝了之后心情会平静些的哟~”  
+“真帆小姐，来，你的咖啡，喝了之后心情会平静些的哟\~”  
 “谢谢，我这就喝。”  
 “……！？”  
 比屋定？她居然，在 LAB 里。世界线改变之前，她应该还在和光市的办公室才对。  
 “呼……仔细回想，今天早上到现在还什么都没吃过啊。”  
 “毕竟发生了那种事，也是没有办法的呀。  
  要吃点什么吗？虽然只有炸鸡块啊还有香蕉之类的零食。  
- 要不，我去买点便当来怎么样呀？啊，好像披萨也不错~”  
+ 要不，我去买点便当来怎么样呀？啊，好像披萨也不错\~”  
 “谢谢了。不过，不要紧的，还不至于饿到那种地步啦。”  
  而且，既然已经发生了那种事，必须得换宾馆啊。  
  还要办手续什么的，所以过阵子就该回去了。”  
@@ -70,7 +70,7 @@
 
 “说起来……篝，怎么样了？”  
 听到这个问题，轮到桶子一脸困惑，真由理却满脸笑容地回答了。  
-“嗯~这会儿应该到岩手了吧。希望能跟家人顺利见面呢~”  
+“嗯\~这会儿应该到岩手了吧。希望能跟家人顺利见面呢\~”  
 岩手！？这个地名是怎么突然跳出来的？  
 “她的家人找到了吗？”  
 “嗯，所以就跟琉华君和琉华君的父亲，还有铃小姐四个人一起，过去见面了。”  
