--- a/article/sg0/doc/0080.md
+++ b/article/sg0/doc/0080.md
@@ -19,7 +19,7 @@
 “真是的，教授，别开玩笑了！”  
 “这是你们关系要好的证明啊，就好像姐妹一样。  
  那么，我们就开始进行关于今后计划的会议吧。  
- ‘最高效利用时间的人就是胜者’，这也是我的名言哦~  
+ ‘最高效利用时间的人就是胜者’，这也是我的名言哦\~  
  话说想来点音乐啊。*‘Kurisu’*，能麻烦你一下吗？”  
 “好的。”  
 马上，笔记本的喇叭里流出了钢琴安静的旋律。  
@@ -33,7 +33,7 @@
 真帆一直认为，人类可以分为“听音乐更能集中注意力”和“无声状态更能集中注意力”两个派别。从脑科学角度来说，听音乐更能集中注意力的说法，原理上是不可能的。即使没有意识到，声音也会让鼓膜振动，随即大脑也会持续进行分析。话虽如此，如果针对这件事召开听证会，真帆觉得自己会作为前者的拥护者而站上证人席。理论和感情是不一样的。听音乐的时候最能集中注意力，灵感也会连续不断地闪现。但是，有一个条件——  
 “能让人集中注意力的音乐，只有莫扎特的曲子。”  
 喃喃自语着，真帆转向了电脑。电脑上的批处理运算用了两天终于结束了，今天一天要对输出结果进行检验。因为是星期六，研究室除了真帆没有其他人了。只有这一天，这个广阔的空间是她独享的研究室。所以她才没有接上耳机，而是用扬声器播放莫扎特的第 11 号钢琴奏鸣曲。也不是为了听音乐，就像是一种仪式，引导她集中注意力，仿佛是潜入数值和公式之海前的准备运动。潜入之后就没必要了，集中注意力后自然就听不到音乐了。周围的风景也从视野中被排除出去。眼前映出的只有数值和公式。脑海中，也只有数值和公式。很快，存在于那里的，唯有名为比屋定真帆的思考机器。意识脱离肉体的束缚，思考速度无限增加。那么，今天也开始愉快的旅程吧——  
-“早上好~前辈。”  
+“早上好\~前辈。”  
 “噫呀啊啊啊——！”  
 突然有个人在耳边低语，真帆从椅子上弹了起来，最终失去平衡而倒下。抬头看去，红莉栖正惊慌失措地看着真帆。 
 “对、对不起！没想到会吓成这样！”  
@@ -60,7 +60,7 @@
 “我也是相同意见。”  
 “太好了！我要集中精神进入状态的时候，也是放着莫扎特做 BGM。  
  不过这不像是科学家应有的言论呢。”  
-“呵呵~”  
+“呵呵\~”  
 听到红莉栖说出了自己脑中方才的想法，真帆不禁笑了出来。红莉栖加入团队两周了。虽然还存在些许距离感，突然间想多了解一些她的事情。于是，真帆说出了同事们之间常用的，暗示休息的信号。  
 “要喝咖啡吗？”  
 “赞成！而且有些事情想要请教前辈。”  
@@ -71,7 +71,7 @@
 用公用咖啡机冲了两杯热咖啡，二人聊着研究相关的话题。20 岁的真帆和 17 岁的红莉栖，单手拿着纸杯装的热咖啡，一边进行着大脑生理学最前沿的讨论，在旁人看来应该是是十分令人讶异的情景。但是对于两个从未有过同龄同性的研究伙伴的人来说，很快就理解到这种交流对双方的好处。特别是对于年纪更小的红莉栖来说，真帆毫无疑问是非常重要的存在。表现之一就是，不论纠正多少次，她都没有改口，而是用“前辈”来称呼真帆。  
 “说起来，爱因斯坦好像很喜欢小提琴呢。”  
 “好像也很尊敬莫扎特呢。喜欢莫扎特说不定是科学家内部渊源深厚的传统。”  
-“如果真是这样，那还真光荣呢，嘿嘿~”  
+“如果真是这样，那还真光荣呢，嘿嘿\~”  
 结束了研究上的讨论之后，咖啡喝完之前，两人谈起了莫扎特。深入谈话之后，真帆发现对红莉栖的印象和当初完全不同。说话时随着话题变化丰富的表情，看着就觉得好可爱。只有这种反应才让人觉得她是一位符合她年龄的少女，而不只是一位“天才”。  
 “前辈，你知道爱因斯坦是怎么回答，‘对你来说死亡意味着什么？’这个问题的吗？”  
 “不知道，怎么回答的？”  
@@ -92,7 +92,7 @@
 “嗯。因为，死了就听不到莫扎特了嘛。”  
 “这不是当然的嘛。”  
 “是的，这是当然的。不只是莫扎特，死了的话什么都听不见了。  
- ——命题为真。呐，很有逻辑性吧~”  
+ ——命题为真。呐，很有逻辑性吧\~”  
 “你真有趣呢，知性和幼稚在一个大脑中共存。”  
 “才不是什么幼稚呢。”  
 “不好意思。可能说得有点晚，今后要请多关照呢，红莉栖。”  
@@ -104,7 +104,7 @@
 ………………  
 总觉得，有件很重要的事情一定要想起来，是什么呢——  
 
-“早上好~前辈。”  
+“早上好\~前辈。”  
 “噫呀啊啊啊——！”  
 突然有个人在耳边低语，真帆从椅子上弹了起来，  
 “什、什么？”  
