--- a/article/sg0/doc/0082.md
+++ b/article/sg0/doc/0082.md
@@ -6,9 +6,9 @@
 “菲莉丝酱到底怎么了呢？”  
 “唉，搞不懂那家伙在想什么。”  
 这次我邀请了真由理同行，起因是菲莉丝莫名其妙的消息。  
-『凶真~~！！！！  
- 不对，冈伦~~~~！！！！  
- 冈伦~~~~~~！！！！  
+『凶真\~\~！！！！  
+ 不对，冈伦\~\~\~\~！！！！  
+ 冈伦\~\~\~\~\~\~！！！！  
  ![](../img/emoji/taru-gui.png)（x2）  
  大危机喵！！！！  
  今天傍晚，乃三十二万年不遇之九星联珠与群星归位并现喵！  
@@ -76,19 +76,19 @@
 “……啊，这个啊。随着时间流逝，人和物都会发生改变。  
  房间当然也不例外呢。怎么样，实用性更强了对吧？”  
 对于比屋定这种完全没有发现异常的语气，我感觉头好晕。  
-“好像在探险一样呢~~”  
+“好像在探险一样呢\~\~”  
 真由理自顾自地在书籍的迷宫中饶有兴趣地漫步。路途中还有帘子作为隔断，全都是悬挂着的五颜六色的吊带睡衣。  
-“啊~这些好可爱啊~”  
+“啊\~这些好可爱啊\~”  
 “颜色……特意选过……挂在这里。”  
-“真的啊~萌郁小姐有好多成熟的睡衣呢~”  
+“真的啊\~萌郁小姐有好多成熟的睡衣呢\~”  
 “真由理，不好意思，谈话节奏乱掉了，请你先出去一下吧……”  
 “啊，嗯。”  
 向比屋定和桐生萌郁询问了情况，但是没有得到有意义的回答。也就是说，这两人完全没有意识到这个房间乱得多么极致。她们俩甚至认为，必要的东西都在伸手可及的范围，是对于生活毫无障碍的、舒适的工作空间。菲莉丝会向我求助，还有黑木先生那将死一般的状态，原因毫无疑问就是这个。作为秋叶家最强管家的黑木先生，是以“一尘不染”为信条的。但是完全没有生活能力的二人，是乱七八糟却毫无自觉的类型，完全超过了黑木先生的极限。也难怪他会露出那样恐怖的表情。恐怕，自从她们俩住下之后，黑木先生就一直在尽力尝试去收拾那个房间。回想起来，前天我来公寓的时候，他的样子就有些不对劲。  
 
 “但是菲莉丝为什么会来向我求助呢？  
  还有，为什么要求带真由理一起来也是个谜。”  
-“诶嘿嘿~关于这一点，真由喜已经想到了理由了！  
- 菲莉丝酱一定是想要收拾这个房间呢~所以才把真由喜叫来了呢。  
+“诶嘿嘿\~关于这一点，真由喜已经想到了理由了！  
+ 菲莉丝酱一定是想要收拾这个房间呢\~所以才把真由喜叫来了呢。  
  只有冈伦一个人来的话，肯定会放弃吧？”  
 “呃……”  
 确实，可能会的。眼前这座拔地而起的新“建筑”，根本不像是靠“收拾”能搞定的。我一个人的话，也许就转身逃回去了。因为就算是找专门的从业者来，打扫一遍也要花一整天吧。何况拿不到工资，完全不划算。即使想发牢骚，但拜托菲莉丝将比屋定安置在这个房间的，就是我自己。硬着头皮干吧。  
@@ -96,11 +96,11 @@
 “是吗？虽然不是很能接受……算了，了解。”  
 “……知道了……”  
 “我尽量找些熟人过来帮忙，该找谁呢……”  
-“对了~真由喜又想到了呢！找清扫军曹来帮忙怎么样？”  
+“对了\~真由喜又想到了呢！找清扫军曹来帮忙怎么样？”  
 “清扫军曹？那是什么？”  
 “清扫军曹啊，对打扫很有心得呢！房间越乱就越有干劲！”  
 “你的熟人吗？”  
-“嗯，冈伦也很熟的一个人哦~”  
+“嗯，冈伦也很熟的一个人哦\~”  
 “诶？我也……很熟的人？”  
 
 
