--- a/article/sg0/doc/0085.md
+++ b/article/sg0/doc/0085.md
@@ -5,15 +5,15 @@
 ![](../img/0085-1.png)
 
 “真由理姐姐！接下来到那个店！”  
-“嗯！那就准备~预备——开始！”  
+“嗯！那就准备\~预备——开始！”  
 “到啦——！是我赢啦！”  
 “哈啊，输了呢～绹酱跑步还真快呢。”  
 “你们两个，晚上这么跑很危险的。”  
-“没问题的啦。呐~”  
-“呐~”  
+“没问题的啦。呐\~”  
+“呐\~”  
 由于时间也很晚了，配合绹的回家时间，大扫除后的派对就此散会了。我和真由理借助了清扫军曹的力量，也有责任将其送回显像管工房。比屋定也意外地想要一起出来散个步。  
 “那下一个，就到前面的那家店吧！”  
-“好——真由喜这回不会再输啦~预备——开始！”  
+“好——真由喜这回不会再输啦\~预备——开始！”  
 “唉，真是的……”  
 绹看起来比平时更加情绪高涨呢。是努力完成了清扫军曹的工作，得到了赞扬的原因吧。  
 “呵呵。”  
