--- a/article/sg0/doc/0087.md
+++ b/article/sg0/doc/0087.md
@@ -14,7 +14,7 @@
 莱耶丝教授枪口对着真帆，微笑着。  
 “这句话的意思，你能明白吧？”  
 “……意思是，我也可以选择不被杀的做法，是吧？”  
-“嗯~我喜欢聪明的孩子哦~”  
+“嗯\~我喜欢聪明的孩子哦\~”  
 
 ![](../img/0087-1.png)
 
@@ -23,17 +23,17 @@
 不愧是“红莉栖”，只是看到真帆的表情就察觉到了气氛不妙。莱耶丝教授沉默地微笑着，真帆盯着对准她的枪口，回答“红莉栖”：  
 “现在，大危机中……”  
 “……”  
-“把现在的情况告诉那孩子呀~”  
+“把现在的情况告诉那孩子呀\~”  
 “诶？这个声音，莱耶丝教授吗？”  
-“嗯，是我哟~”  
+“嗯，是我哟\~”  
 真帆旋转桌面上的笔记本电脑，让屏幕上方的摄像头朝向门口方向。  
 “啊……！？莱耶丝教授，那把枪是……？”  
 “……雷斯吉宁教授被杀了，被这个女人。”  
 “什么！？”  
 “红莉栖”大惊失色  
 “……莱耶丝教授，你知道自己在干什么吗？你至今为止的职业生涯要毁于一旦了啊。”  
-“凭大学的工资，有点担心自己的老年生活啊~你看，我也没有男人缘。  
- 所以，就跳槽到能赚更多钱的单位咯~”  
+“凭大学的工资，有点担心自己的老年生活啊\~你看，我也没有男人缘。  
+ 所以，就跳槽到能赚更多钱的单位咯\~”  
 听到这里，真帆明白了莱耶丝的目的。  
 “你，想将『Amadeus』转为军事用途吧……！？”  
 “啊……！”  
@@ -42,7 +42,7 @@
 “我需要控制代码。  
  现在这种状态，即使复制了全部数据，这个傲慢的 AI 也不会听我的话吧？”  
 “傲慢……？这，是在说我吗？”  
-“我认为这已经是委婉的表达了哦~”  
+“我认为这已经是委婉的表达了哦\~”  
 “……”  
 “好啦 *Maho*，打开 *‘Kurisu’* 隐藏的秘密日记的锁吧。  
  明白吧？输入控制代码，解锁『Amadeus』的不可侵领域，然后把我重设为最高管理员。  
@@ -51,7 +51,7 @@
 “现在立刻，就让你和恩师再会。”  
 莱耶丝用枪指了指沙发上的教授遗体。  
 “谁能保证，在我输入控制代码后，你不会开枪？”  
-“那就看你信不信任我咯~  
+“那就看你信不信任我咯\~  
  不过我可以告诉你，我现在的老板需要一个『Amadeus』的维护人员。  
  如果你有跳槽的打算，我可以帮你介绍。”  
 “……”  
@@ -65,7 +65,7 @@
 “‘红莉栖’……对不起。”  
 “……”  
 真帆轻轻闭上眼，然后哼唱起一段旋律。  
-“哇哦！『Amadeus』的控制代码居然是莫扎特的旋律，很潮嘛~”  
+“哇哦！『Amadeus』的控制代码居然是莫扎特的旋律，很潮嘛\~”  
 这段旋律来自 K331——莫扎特 A 大调第 11 号钢琴奏鸣曲，作为两个人友谊契机的第一乐章的开头部分。  
 真帆唱完后，电脑界面发生了变化。  
 
