--- a/article/sg0/doc/0088.md
+++ b/article/sg0/doc/0088.md
@@ -8,7 +8,7 @@
 太阳穴处传来冰冷坚硬的感触，不用看也知道，莱耶丝用枪口指着自己。  
 “双手离开键盘，举到头部。”  
 “……你骗我？”  
-“不要说得那么难听啦~快，赶紧举起手来。”  
+“不要说得那么难听啦\~快，赶紧举起手来。”  
 真帆乖乖地举起手。  
 “对，这样才对。  
  我会按照约定把你介绍给老板的。  
@@ -17,7 +17,7 @@
  ‘喂喂朱蒂，就算再怎么优秀，死人可写不了代码吧？’”  
 “你……!没有一点作为人的良心吗！”  
 “哈！打算交出『Amadeus』来换自己那条贱命的你，可没资格说我啊。  
- 哎呀~我说得不对呢。不是打算，而是已经交出了呢。  
+ 哎呀\~我说得不对呢。不是打算，而是已经交出了呢。  
  重启之后，『Amadeus』的最高管理权限就是我的了。*‘Kurisu’* 会成为我顺从的仆人。  
  *Maho*，你就在天国好好看着 *‘Kurisu’* 跪着舔我的鞋子的姿态吧。”  
 “……”  
