--- a/article/sg0/doc/0089.md
+++ b/article/sg0/doc/0089.md
@@ -18,7 +18,7 @@
 莱耶丝从口袋里取出了 U 盘，接到了笔记本电脑上。  
 “保存到现在接入的 U 盘吧。”  
 【复制开始。预计 42 秒后完成，请稍等。】  
-“*Yes~!*”  
+“*Yes\~!*”  
 莱耶丝激动得满脸通红。萌郁用眼神示意这是冲进去的时机，但是真帆仍然摇头拒绝。  
 【传输结束——】  
 莱耶丝急着想要拔出 U 盘，然而这时候——  
@@ -28,7 +28,7 @@
 
 突然，系统界面的红色褪去，至今为止都面无表情如机械般说话的“红莉栖”，换成了如同往常一般充满了人类情感的说话方式。情感丰富到，明显就是在挑衅了。  
 “什、什么？”  
-“莫扎特的旋律是控制代码~？那种事怎么可能啊！  
+“莫扎特的旋律是控制代码\~？那种事怎么可能啊！  
  真到了需要更新的时候，前辈岂不是没法在研究所输入口令了吗？  
  要是在研究所这样唱出来，一定会被教授录下来，每到聚会就进行播放。”  
 “什、什么……！？”  
@@ -39,13 +39,13 @@
 “啊啊，那个啊？随便瞎编的啦，随·便·瞎·编！(＞ｖ☆)”  
 “居然是……瞎编的！？”  
 “真帆前辈突然唱起来，我一下子就明白了，这是为了争取时间吧。  
- 所以，首先装成你计划得逞的样子啦~  
+ 所以，首先装成你计划得逞的样子啦\~  
  至于系统信息，那只是临时想到的只言片语随便排列起来的东西，  
  并没有什么意义。”  
 就是这么回事。虽然真帆当时心里是打算破釜沉舟，好在“红莉栖”巧妙地配合了她，默契得天衣无缝。不过听到“红莉栖”说出“A10 神经逻辑回路”之类的专业词汇的时候，真帆也稍微愣了一下。这种意义不明的单词，她竟然能如此流利地说出来。  
 “再说了，明明都有控制台窗口了，为什么还要我重复播报输出内容啊？  
- 又不是科幻电影，不至于没效率到这种程度吧~”  
- 呐，被骗得彻彻底底，现在心情如何~？呐呐，心情如何~~？(＞ｖ☆)”  
+ 又不是科幻电影，不至于没效率到这种程度吧\~”  
+ 呐，被骗得彻彻底底，现在心情如何\~？呐呐，心情如何\~\~？(＞ｖ☆)”  
 “哼……！！”  
 “莱耶丝拿起放在桌上的手枪，冲动地指向了显示在屏幕里的“红莉栖”。”  
 “你这个！区区一个 AI……！！”  
