--- a/article/sg0/doc/0090.md
+++ b/article/sg0/doc/0090.md
@@ -29,7 +29,7 @@
 萌郁腹部被击中，倒在了地上。  
 “桐生！”  
 “嘎、咳咳！”  
-“太糟糕了~你的朋友受了重伤，正在大出血哟！放置不管的话她毫无疑问会死的。”  
+“太糟糕了\~你的朋友受了重伤，正在大出血哟！放置不管的话她毫无疑问会死的。”  
 “啊……咳、嘎哈！”  
 萌郁的眼睛盯着真帆，似乎想说什么，可是只有鲜血不断地从她口中涌出。  
 “桐生……！”  
