--- a/article/sg0/doc/0091.md
+++ b/article/sg0/doc/0091.md
@@ -73,7 +73,7 @@
 “还有，前辈——  
  **凤凰院凶真，就拜托你了！**”  
 “凤凰院……？是谁？”  
-“嘿嘿~你早晚会知道的。一定——！”  
+“嘿嘿\~你早晚会知道的。一定——！”  
 唐突地，“红莉栖”的身影从屏幕中消失了，取而代之的是显示删除指令完成的信息。  
 
 ![](../img/0091-1.png)
