--- a/article/sg0/doc/0094.md
+++ b/article/sg0/doc/0094.md
@@ -142,7 +142,7 @@ D-mail？
 “咖啡……已经没有了呢。”  
 “……知道了。”  
 这样的话，就跑一趟吧。正好出去走走，整理一下大脑。  
-“要买加牛奶和砂糖的，很甜那种哦~”  
+“要买加牛奶和砂糖的，很甜那种哦\~”  
 “以前不是不加奶的吗？”  
 “天冷了，想多喝点甜的东西。”  
 “明白了。”  
@@ -153,9 +153,9 @@ D-mail？
 感觉好像目光一离开，你就会消失——但是，果然太难为情了还是没说出口。  
 “冈部。”  
 “嗯？”  
-“振作点哦~”  
+“振作点哦\~”  
 “又不是小孩了，跑点腿总能做到的。”  
-“嗯，也是呢。路上小心~”  
+“嗯，也是呢。路上小心\~”  
 
 ![](../img/0094-4.png)
 
