--- a/article/sg0/doc/0095.md
+++ b/article/sg0/doc/0095.md
@@ -9,7 +9,7 @@
 “红莉栖！！”  
 “诶……？”  
 “红莉栖……你……这个是……”  
-“呃……败给你了，被你发现啦~”  
+“呃……败给你了，被你发现啦\~”  
 红莉栖和一开始我看到她的时候一样，伫立着，盯着开发室的角落。昏暗的角落摆放着的，是在刚刚还被很大一块布盖着的，一台连门都没有的古老的微波炉。  
 
 ![](../img/0095-1.png)
@@ -17,8 +17,8 @@
 ——电话微波炉（暂定）。曾经我们在这里制造的，未来机械 8 号机。也是改变了我的——不，是改变了世界的命运的机器。  
 “为什么？这东西不是已经被破坏了吗？”  
 “……嗯嗯，已经破坏了。  
- 这是我重新制造的，说起来应该叫『电话微波炉改』呢~  
- 准确的说是要加（暂定）对吧？所以就变成了『电话微波炉（暂定）改』~”  
+ 这是我重新制造的，说起来应该叫『电话微波炉改』呢\~  
+ 准确的说是要加（暂定）对吧？所以就变成了『电话微波炉（暂定）改』\~”  
 红莉栖眯起一只眼睛，故作轻松地说着无关紧要的话。那样子与刻在我脑海深处的一样可爱，可是现在的我完全无暇欣赏，也无暇接上她的话题。  
 “名字什么的怎么样都好。为什么……要重新造出来……”  
 “为了把邮件送到过去。我要发送邮件，改变世界线。  
@@ -74,18 +74,18 @@
 凤凰院凶真……吗？十分令人怀念的名字。  
 “你选择了正确的道路。拯救真由理这个选择是绝对没错的！”  
 “但是，我把你……”  
-“听好了，现在，你在这里的这件事……对，只是在做梦而已哦~”  
+“听好了，现在，你在这里的这件事……对，只是在做梦而已哦\~”  
 “梦……？”  
 “对，在梦里，你见到了我。只是这样而已。怎么样？这样想的话，稍微轻松一点了吧？”  
 红莉栖耸了耸肩，笑了。  
 “虽然脑科学的研究已经有了这么大的进展，但是人做梦的机理还没有解明呢。  
  虽然有一种说法，人在睡觉的时候，大脑会进行记忆的整理，在这个过程中产生了梦。  
- 简言之，这里是β世界线的你闯入的梦中世界，是为了让你整理脑中的记忆哦~  
+ 简言之，这里是β世界线的你闯入的梦中世界，是为了让你整理脑中的记忆哦\~  
  既然是梦的话，总是要醒过来的，对吗？”  
 “但是，这不是梦！现在这样——”  
 我伸出手，触碰着红莉栖的脸颊。  
 “现在这样，你就在这样存在于这里不是吗……”  
-“触感只不过是脑感知的机能之一哦~”  
+“触感只不过是脑感知的机能之一哦\~”  
 红莉栖轻快地后退了一步。随着她的身姿远去，手掌的触感一下子消失了。  
 “况且，在这里的你也不会幸福。永远也没办法从后悔中走出来。而我也一样……”  
 “就算在β世界线，也是一样的……我一直、一直都活在救不了你的悔恨之中。”  
@@ -115,7 +115,7 @@
 我竭尽全力地逞强。这一点，恐怕红莉栖也是同样。  
 “总之，忘记我吧。不管是今天相遇的事情，还是之前经历的事情。这就是我的愿望。”  
 红莉栖又转过身来，伸出了小拇指，强硬的勾住我的小拇指。  
-“拉钩上吊~说谎的人海马体被电极刺~拉钩了~”  
+“拉钩上吊\~说谎的人海马体被电极刺\~拉钩了\~”  
 “……韵脚真糟糕呐。”  
 “你管我。”  
 
@@ -170,7 +170,7 @@
 
 ![](../img/0095-4.png)
 
-“冈部……好好醒来哦~”  
+“冈部……好好醒来哦\~”  
 红莉栖在那一瞬间转过身来，调动全身的力气露出她能做到的最大的笑容。随后她的声音，消失在噪音中——  
 
 
