--- a/article/sg0/doc/0097.md
+++ b/article/sg0/doc/0097.md
@@ -24,7 +24,7 @@
 “话说回来，琉华君真的是男孩子？”  
 真由理妈妈叫他“琉华君”。对于这个称呼，作为小孩子的她没有觉得不可思议，也效仿着叫他“琉华君”。  
 “是……的啊。”  
-“嗯~不管怎么看都是女孩子嘛。”  
+“嗯\~不管怎么看都是女孩子嘛。”  
 “就算这样说也……”  
 “对了，呐，明天，一起洗澡吧？”  
 “诶——！？”  
@@ -38,7 +38,7 @@
 “篝……篝？”  
 “抱歉抱歉，开玩笑、开玩笑的啦。琉华君很可爱，忍不住就捉弄了一下。”  
 “怎么这样……”  
-“但是，既然是这种反应，果然是男孩子啊~”  
+“但是，既然是这种反应，果然是男孩子啊\~”  
 “一开始不就是这样说的嘛……”  
 连困扰的表情也十分像女孩子，篝如此想着。  
 “如您所见，在这里的店有着数十种的食物，全部都是随便吃！”  
