--- a/article/sg0/doc/0103.md
+++ b/article/sg0/doc/0103.md
@@ -17,7 +17,7 @@
 “就像小时候妈妈经常对我做的，抱我一下可以吗？”  
 “诶～哇哇～好害羞的～”  
 “不行吗？”  
-“不会……当然可以的呀~”  
+“不会……当然可以的呀\~”  
 篝满面阳光地抱住了害羞着点头的真由理。  
 “篝酱～好乖～好乖～”  
 “诶嘿嘿～”  
@@ -57,11 +57,11 @@
 
 “啊，真由理酱，时间不早了。”  
 “啊……真的。呐，冈伦，接下来篝酱的事情可以拜托你吗？  
- 之后在学校有一场关于升学的宣讲会~我们必须要出席。”  
+ 之后在学校有一场关于升学的宣讲会\~我们必须要出席。”  
 “对不起……”  
 “不用道歉。别担心，我一定会把篝平安送到家的。”  
 “非常感谢。”  
-“那么篝酱，明天见啦~”  
+“那么篝酱，明天见啦\~”  
 “嗯，妈妈，明天见。”  
 
 送走真由理和琉华子之后，房间里就只剩我和篝两个人。因为记忆的问题，篝这几天也暂缓了显像管工房的打工。话虽如此，为了以防万一，还是让她白天尽量到这里来。楼下有天王寺和铃羽，这样也能安心一些。  
@@ -75,7 +75,7 @@
 “嗯，从桶子叔叔或者妈妈那听来的故事里的人。”  
 原来如此。听铃羽说，我在 2025 年就死了。也就是说，在篝那个时代，我已经不在了。  
 “妈妈经常会说到冈伦先生的故事呢。  
- 比如‘冈伦救了妈妈，冈伦是妈妈的牛郎星哦~’之类的。”  
+ 比如‘冈伦救了妈妈，冈伦是妈妈的牛郎星哦\~’之类的。”  
 “那家伙，未来还在讲这种话吗？”  
 这次轮到我感到不好意思了。  
 “所以我一直都很好奇，妈妈一直念念不忘的冈伦先生，是怎样的人呢？  
