--- a/article/sg0/doc/0104.md
+++ b/article/sg0/doc/0104.md
@@ -27,7 +27,7 @@
 如今篝的脑海里，应该只有战争痛苦的记忆而已。至少作为“椎名篝”的记忆只有这些。然而，她却还这么顾虑我。即使没有血缘关系，她果然就是真由理的孩子。  
 
 虽说要聊开心的事，但是该聊些什么好呢？  
-“嗯……是哦，难得有这个机会，就说说妈妈年轻时候的事情吧~”  
+“嗯……是哦，难得有这个机会，就说说妈妈年轻时候的事情吧\~”  
 “真由理的？”  
 “啊，说是年轻的时候，妈妈现在也很年轻。  
  但是，我想听更年轻时候的故事。比如说……‘人质’的故事？”  
@@ -51,7 +51,7 @@
 “诶？啊，嗯……”  
 我为了岔开话题迈出了步子，篝也不明所以地跟了过来。  
 “有什么想吃的吗？”  
-“嗯……我的话吃什么都可以啦~”  
+“嗯……我的话吃什么都可以啦\~”  
 “这种回答是最让人困扰的。”  
 “因为，这个时代的食物，不管什么都好好吃，好吃到令人震惊。”  
 “未来都吃什么呢。”  
@@ -72,12 +72,12 @@
 “拜其所赐生意超旺，都满座了喵。要入座的话，差不多还得等 30 分钟喵……”  
 “既然这样，那就下次吧。”  
 “嗯，不那么忙的时候，我们再过来吧。”  
-“特地跑来一趟，对不起喵~”  
+“特地跑来一趟，对不起喵\~”  
 
 从 *MayQueen+Nyan²* 出来之后就到处逛。因为正好是午饭时间，显眼的店面不管哪家都是人满为患。  
 “好厉害啊，到处都是人。”  
 “真是的，为什么都特地跑出来吃饭，在家里吃不就行了。”  
-“哈哈~不过，这句话也能套用在我们身上吧。”  
+“哈哈\~不过，这句话也能套用在我们身上吧。”  
 “那接下来怎么办呢。”  
 “回 LAB 吃吧？”  
 “先说好，我是不会做饭的。”  
@@ -89,7 +89,7 @@
  桶子叔叔总是念叨‘好想吃——好想吃——’，所以我一直很好奇呢。”  
 既然她觉得可以，我也无所谓。既然如此，难得地就——  
 我们在附近的便利店买入了大量的杯面。买多的部分，反正桶子会吃掉的。  
-“好厉害啊，杯面有那么多种类啊~”  
+“好厉害啊，杯面有那么多种类啊\~”  
 “现在和未来不一样，是能够吃撑的时代。便利店这些地方，每周都有新商品上架。”  
 “这样啊。呐，这里面，吃哪个都可以吗。”  
 篝向我提着的购物袋里面窥探着。  
@@ -113,8 +113,8 @@
 “没什么，又不是什么贵重的东西。”  
 红莉栖过去想要的 “My Fork”——我并不是为了赎罪，只是单纯想这么做而已。  
 “太棒啦！谢谢！实际上我很不擅长用筷子呢，总是被妈妈矫正……  
- 啊，这个末端还有兔子先生，好可爱~  
- 诶嘿嘿～我专属的叉子。这是我的第二个专属物品啦~”  
+ 啊，这个末端还有兔子先生，好可爱\~  
+ 诶嘿嘿～我专属的叉子。这是我的第二个专属物品啦\~”  
 另外一个肯定是真由理给她的乌帕钥匙圈吧。  
 “但是，怎么说呢……我觉得自己好像一直想要这个的……  
  难道，这也是红莉栖小姐的记忆吗？”  
