--- a/article/sg0/doc/0109.md
+++ b/article/sg0/doc/0109.md
@@ -33,7 +33,7 @@
 “是吗……”  
 对了，那时，也下着雨呢。自己和真由理之间存在着要有一个人死去的命运——知道了这些的红莉栖在那一天，在这里，也像这样，抬头看着天空。  
 
-“哇！下、下得好大~！冈伦，到里面——”  
+“哇！下、下得好大\~！冈伦，到里面——”  
 “…………”  
 “冈伦？”  
 那个时候，那家伙在想些什么呢。把自己的命运交给他人——交给我来决断的那家伙。  
@@ -43,7 +43,7 @@
 ![](../img/0109-3.png)
 
 就这样被拽了进来，等我我回过神来的时候——发现自己坐在了这里。不知是不是改建计划的影响，已经没有正在营业的店铺，照明也关闭了，因此光线十分昏暗。  
-“哈~吓我一跳。”  
+“哈\~吓我一跳。”  
 那天，在那场雨之后，我和红莉栖正是在这里，彼此相依促膝长谈。而且同时，这里是——  
 “就是这里。”  
 “诶？”  
