--- a/article/sg0/doc/0110.md
+++ b/article/sg0/doc/0110.md
@@ -4,15 +4,15 @@
 
 “总、总之，请先进来。”  
 初次进入琉华子的房间……果然很像女孩子的房间。  
-“哇，两个人都湿透了……要赶紧换衣服啊~”  
+“哇，两个人都湿透了……要赶紧换衣服啊\~”  
 比起从广播会馆回 LAB，往柳林神社走会更省时间。我这样判断，把篝带回了柳林神社。中途因为真由理打电话过来，就先让她来这边了。对于现在的篝来说，比起我，有真由理妈妈在身边，应该会更安心吧。  
 “妈妈……”  
 果然，看到真由理的脸，篝的表情稍微平静了一点。  
-“很冷吧~？”  
+“很冷吧\~？”  
 “我去烧洗澡水！”  
 在给了我们用于擦干雨水的毛巾之后，琉华子赶忙走出了房间。  
 “我想和妈妈一起……洗澡……”  
-“和真由喜？嗯，好哒~啊，但是，冈伦要怎么办？”  
+“和真由喜？嗯，好哒\~啊，但是，冈伦要怎么办？”  
 “我没事，让篝先进去洗吧。”  
 “嗯，谢谢。冈伦也别感冒了，就算只是换件衣服也好啊？”  
 “那个……我看着办。”  
