--- a/article/sg0/doc/0002.md
+++ b/article/sg0/doc/0002.md
@@ -4,14 +4,14 @@
 
 平复心情的时候接到了真由理的 **RINE**。  
 这是最近才火起来的一种即时通讯软件，比邮件更加方便，所以用的人很多。  
-『嘟嘟噜~♪冈伦~研讨会的准备还顺利吗？』  
+『嘟嘟噜\~♪冈伦\~研讨会的准备还顺利吗？』  
 「啊啊，没问题」  
-『是吗？真好呢~  
+『是吗？真好呢\~  
  很期待是怎样的研讨会呢  
- 真由喜也想看看啊~』  
+ 真由喜也想看看啊\~』  
 「对你来说可能太难了」  
 『![](../img/emoji/mayuri-wuyu.png)  
- 说的也是呢~那么，就不打扰你啦，再见~~』  
+ 说的也是呢\~那么，就不打扰你啦，再见\~\~』  
 字里行间都充斥着真由理那无忧无虑的风格啊。多亏了她，15 分钟感觉也没那么难过了。  
 
 前台上，堆着分发给研讨会参加者的小册子和宣传单，还有资料的折叠传单。  
