--- a/article/sg0/doc/0011.md
+++ b/article/sg0/doc/0011.md
@@ -3,9 +3,9 @@
 > [ 2010/12/04 吹雪视角 ] 真由理和她的 cosplay 伙伴三人；吹雪的噩梦。  
 
 到了 12 月，天空变暗的时间越来越早。在 cosplay 店中选择商品的时候，外面的景色已经踏入了夜晚。中濑克美感到惊讶。拉着的拉杆箱传来沉甸甸的感觉。今天买的东西全都塞了进去，箱子都很明显地涨了起来。尽管如此，能够和因为 cosplay 而互相认识的朋友们一起买东西，假期过得很充实。爽快的疲劳感。到车站的路上都踏着轻快的脚步。  
-“吹雪酱，快要跳着小步了吖~”  
-“啊，你明白？因为今天买了好多东西，很开心哦~满足满足！”  
-“多亏了吹雪酱，真由喜也愉快地购物了哦~谢谢你来陪我。”  
+“吹雪酱，快要跳着小步了吖\~”  
+“啊，你明白？因为今天买了好多东西，很开心哦\~满足满足！”  
+“多亏了吹雪酱，真由喜也愉快地购物了哦\~谢谢你来陪我。”  
 “为了真由喜，这可是小事一桩呢！”  
 吹雪一边回答，一边朝着真由理抱了上去，但是被真由理轻巧地避开了。真由理虽然看上去呆呆的，但其实运动神经很好。  
 顺带一提，“吹雪”是中濑克美的 cosplay 名。  
@@ -27,18 +27,18 @@
 
 ![](../img/0011-3.png)
 
-真由理：“没这样的事。要你们帮忙什么的，多不好意思呀~”  
+真由理：“没这样的事。要你们帮忙什么的，多不好意思呀\~”  
 大家一起微笑着看向真由理，而她则慌张地左右摇头。  
 真由理：“因为今天，一半以上的材料费都被你们分担了吧？真由喜这样就已经很高兴了。”  
 枫：“因为是制作我们的服装啊，要是不出钱的话才过意不去。”  
 由季：“而且我一直想着和真由理酱一样，能够制作出漂亮的衣服。”  
 吹雪：“嗯嗯。而且真由喜制作的服装质量好高的！真的，非常感谢哦。”  
 由季：“呐，真由理酱，请务必让我们帮忙！”  
-真由理：“诶嘿嘿~嗯，那么，大家一起制作吧？”  
+真由理：“诶嘿嘿\~嗯，那么，大家一起制作吧？”  
 自己做的衣服被赞扬，对真由理来说是比什么都高兴的事情。吹雪她们是知道的。  
 真由理：“啊，有另外一件事，真由喜想要拜托大家。其实……”  
 真由理郑重其事地向三人说的，是现在已经成为日本人年末的例行公事一样的一大活动——  
-真由理：“我们要开圣诞派对！由季，枫酱和吹雪酱请务必要来哦~”  
+真由理：“我们要开圣诞派对！由季，枫酱和吹雪酱请务必要来哦\~”  
 吹雪：“圣诞派对吗？”  
 真由理：“嗯！怎么样？”  
 吹雪：“要去要去！”  
@@ -52,19 +52,19 @@
 由季：“才，才没有这种事情！”  
 吹雪：“是这样吗？那么我可不会错过机会！”  
 由季：“要是能和吹雪酱在圣诞节约会的话，比任何事情都要优先呢。”  
-吹雪：“哈~由季，love~~”  
+吹雪：“哈\~由季，love\~\~”  
 枫：“呵呵，吹雪酱不是对真由理酱一心一意的吗？”  
 吹雪：“真由喜也是，枫酱也是，最喜欢了的说！”  
 吹雪迅速地抱住枫。像这样对柔软并散发着好闻香味的枫揉揉抱抱，是让她的日常。  
 真由理：“啊，对了。由季，下次，能教真由喜做美味的法式咸派吗？”  
 由季很擅长料理，最近经常教真由理。吹雪和枫也偶尔会参加“由季料理教室”。  
-由季：“可以哟~想做什么样的法式咸派？”  
-真由理：“嗯~真由喜想要做菠菜和蘑菇的！”  
-枫：“火腿和番茄还有培根也很美味哦~”  
+由季：“可以哟\~想做什么样的法式咸派？”  
+真由理：“嗯\~真由喜想要做菠菜和蘑菇的！”  
+枫：“火腿和番茄还有培根也很美味哦\~”  
 吹雪：“啊啊！只是想想口水就流出来了……”  
 真由理：“嗯……这样啊，真难选择呢……”  
 由季：“那么，两个都教给你吧。”  
-真由理：“真的？是呢~有各种味道大家也会开心呢~”  
+真由理：“真的？是呢\~有各种味道大家也会开心呢\~”  
 由季：“莫非，是圣诞派对用？”  
 真由理：“嗯，是的呢。虽然只有不到一个月的时间了，在那之前想要学会呢。”  
 由季：“那就特训吧。什么时候？明天？”  
@@ -75,22 +75,22 @@
 由季：“场所的话，如果是我租的房子，稍微有点远……”  
 真由理：“LAB 怎么样？”  
 由季：“嗯，好啊。”  
-真由理：“要加油学习制作方法了哦~”  
-由季：“能成为一个开心的派对就好了呢~”  
+真由理：“要加油学习制作方法了哦\~”  
+由季：“能成为一个开心的派对就好了呢\~”  
 
 真由理：“嗯！真由喜要做圣诞的衣服。大家愿意穿吗？”  
 由季：“哇，除了 CM 的份之外还要做啊！真由理酱真有干劲呢。”  
-真由理：“真由喜干劲满满的哟~呼呼！”  
+真由理：“真由喜干劲满满的哟\~呼呼！”  
 真由理这么说着鼓起了干劲，做了个小小的胜利姿势。  
 枫：“圣诞服的话，可爱的迷你裙很不错啊。配上白色的过膝长袜和红色的长筒皮靴……”  
 吹雪：“诶——？枫酱倒还好，我好像不适合这种吧”  
 克美没有自信地向真由理和由季问道。  
-由季：“明明是很喜欢可爱的衣服的说~”  
+由季：“明明是很喜欢可爱的衣服的说\~”  
 被戳中要点，吹雪连辩解的话都说不出。对于自己的容貌很像男孩子一样这件事，她一直很自卑，所以也有衣服不合适的自觉。就算这样，犹豫心理上也是完全的少女，所以也有想要穿可爱衣服的愿望。  
 真由理：“交给我好了！真由喜会好好做适合吹雪酱的衣服的。”  
 吹雪：“哦哦！不愧是我的老婆！结婚吧！”  
 枫：“吹雪酱，真是给点阳光就灿烂呢。”  
-真由理：“像桶子君一样说话可不行的哟~”  
+真由理：“像桶子君一样说话可不行的哟\~”  
 吹雪：“唔……把我和那个 HENTAI（变态）绅士当作一类，我受到打击了。”  
 由季：“话说，真由理酱也会一起穿的吧，圣诞老人的衣服。”  
 真由理：“诶？”  
@@ -122,7 +122,7 @@
 真由理：“没关系。真由喜和冈伦只是关系很好的青梅竹马。没事的哟。”  
 由季：“是吗……”  
 看着真由理的笑容，吹雪感觉很难过。她突然产生了一种强烈的，想要紧紧抱住面前这个同岁的软乎乎的女孩子的想法。  
-真由理：“比起那个比起那个~呐，由季，你呢？”  
+真由理：“比起那个比起那个\~呐，由季，你呢？”  
 像是要吹走尴尬的空气一样，这次是真由理笑眯眯地靠近由季。  
 由季：“诶？我？”  
 真由理：“嗯，刚才的话题。果然圣诞节还是和男朋友一起过吗？”  
@@ -134,7 +134,7 @@
 在真由理之后，由季都说出意外的事实，吹雪受到了持续的震惊。  
 枫：“是这样吗？”  
 由季：“也，也不至于这么吃惊吧……”  
-真由理：“那~由季，那个……”  
+真由理：“那\~由季，那个……”  
 真由理开始扭扭捏捏起来。  
 由季：“嗯？”  
 真由理：“比如桶子君，你觉得怎么样？”  
@@ -170,19 +170,19 @@
 明显不是“什么都没有”的样子。吹雪实在看不下去她这个样子，于是解放了自己的冲动——  
 
 “真由喜，不要露出这样的表情。真由喜笑着的时候是最可爱的。  
- 呐，来吧来吧，不笑的话我就要来挠痒痒了~  
+ 呐，来吧来吧，不笑的话我就要来挠痒痒了\~  
  我挠我挠我挠……”  
 悄悄迂回到真由理背后的吹雪，从腋下入手开始了挠痒痒攻击。而真由理则是难以自抑地笑了起来。就这样闹了一小会儿之后，吹雪终于停了手。  
 “认命了？”  
 “真是的，吹雪酱真是坏心眼……”  
-“嗯~真由喜，太可爱了！”  
+“嗯\~真由喜，太可爱了！”  
 这次终于成功抱住笑得眼泪都出来的真由理，就这样不顾及别人眼光地蹭了起来。  
-“真由喜，喜欢你哟~最喜欢了——！”  
+“真由喜，喜欢你哟\~最喜欢了——！”  
 “哇！？等…等等！吹雪酱？”  
 “想就这样带回家，一直 prpr 啊！”  
 “那真是难办啊……”  
 “难办也没关系，和我结婚吧！”  
-“都说了不行了啦~”  
+“都说了不行了啦\~”  
 想要逃跑的真由理被吹雪抱得更紧，kiss 像雨一般袭来。  
 “哈……哈……累死我了。”  
 “那是真由喜的台词哟！”  
@@ -195,15 +195,15 @@
 “冬季 CM，一起 cos 吧？”  
 “啊哈，之前说过的吧，冬季 CM 的话真由喜是要专注于制作方面。”  
 “就算这样也无所谓，总之冬季 CM 也绝对要我们四人一起参加哟！呐？”  
-“这是当然的啦~今天就是为了这个大家才一起出来买东西的嘛。”  
+“这是当然的啦\~今天就是为了这个大家才一起出来买东西的嘛。”  
 “也是呢……不过，说好了哦！”  
 “嗯，说好了！”  
 
 真由理和由季因为电车方向不同，在车站前和吹雪二人告别了。  
-真由理：“再见啦~”  
+真由理：“再见啦\~”  
 枫：“晚安，真由理酱，由季。”  
 由季：“再见。”  
-真由理：“嘟嘟噜~♪”  
+真由理：“嘟嘟噜\~♪”  
 吹雪：“拜拜！”  
 吹雪一直站在这里目送着真由理和由季的背影消失在视线中。为了忍住快要掉落的眼泪，她仰起了头。  
 “吹雪酱……怎么了？”  
