--- a/article/sg0/doc/0023.md
+++ b/article/sg0/doc/0023.md
@@ -2,9 +2,9 @@
 > 1.129848  
 > [ 2010/12/21 ] MayQueen，冈伦和桶子讨论关于篝和红莉栖笔记本和硬盘的问题。  
 
-“欢迎回来喵，主人~”  
+“欢迎回来喵，主人\~”  
 一进入女仆咖啡店 *MayQueen+Nyan²* ，就听到了工作中的猫耳女仆们朝气蓬勃的欢迎。因为是工作日的傍晚，即使是这样的高人气店，也能看到空位。也因此菲莉丝有空亲自来接待我。  
-“欢迎回来喵~凶真——不对，冈伦~”  
+“欢迎回来喵\~凶真——不对，冈伦\~”  
 “啊。那个，今天，真由理呢？”  
 “真由喜的话，马上就来了喵。还有大概 30 分钟。”  
 “这样啊。”  
@@ -31,11 +31,11 @@
 因为之前的事故——现在正被当成案件处理，今天我们又被叫去警察局了。  
 结束后，意识到两个人都没吃午饭，我就把她带过来了。  
 菲莉丝把迅速把背挺直，站在比屋定面前，恭恭敬敬地行礼，接着笑着摆出猫一般的姿势。  
-“欢迎回来，大小姐~”  
+“欢迎回来，大小姐\~”  
 “……？”  
-“在本店，不说‘欢迎光临’，而是说‘欢迎回来’的喵~”  
+“在本店，不说‘欢迎光临’，而是说‘欢迎回来’的喵\~”  
 “啊啊，是这样呢。”  
-“菲莉丝·喵喵哟~问大小姐芳名？”  
+“菲莉丝·喵喵哟\~问大小姐芳名？”  
 “比屋定真帆哟。”  
 “比屋定……这样来说，冲绳那边的大小姐喵？”  
 “啊啦，居然知道？老是被别人问来问去，经常搞错什么的。  
@@ -54,11 +54,11 @@
 “怎么了？”  
 “还真是很大的人呢……”  
 “等会我会介绍的。还请你说说他让他减肥。”  
-“——那么，真帆喵，我来给你带路喵~”  
+“——那么，真帆喵，我来给你带路喵\~”  
 确认别的女仆将桌子擦干净了以后，菲莉丝适时地接待起比屋定。  
-“真帆喵，很可爱喵~”  
+“真帆喵，很可爱喵\~”  
 “可以的话，能不能正常的称呼……”  
-“这就是正常的啊喵。来吧，请这边来，真帆喵~”  
+“这就是正常的啊喵。来吧，请这边来，真帆喵\~”  
 比屋定就保持那副欲言又止的样子，被带到有点距离的座位去了。  
 
 我走过去在桶子对面坐下，向附近的女仆小姐点了杯咖啡。  
@@ -158,15 +158,15 @@ nüer……nǚér……女儿？
 
 正好这个时候，女仆小姐把咖啡拿过来了。  
 喝着咖啡，往比屋定那边看的时候，菲莉丝依旧陪在她旁边。  
-“那么接下来就是~让煎饼变得更加美味的魔法环节喵~”  
+“那么接下来就是\~让煎饼变得更加美味的魔法环节喵\~”  
 “魔，魔法？”  
-“撒，真帆喵也请一起来~‘世界完蛋喵，阴谋喵~’”  
+“撒，真帆喵也请一起来\~‘世界完蛋喵，阴谋喵\~’”  
 “……可以正常的让我开吃吗？”  
-“在这里这就是正常喵~那么，还请愉快享用喵~”  
+“在这里这就是正常喵\~那么，还请愉快享用喵\~”  
 “我开动了……”  
 “啊啊，真帆喵，流下来了喵！蜂蜜，要流下来了喵！”  
 “诶？啊啦？”  
-“嗯真是的，像个小孩子一样喵~”  
+“嗯真是的，像个小孩子一样喵\~”  
 “小，小孩子……？”  
 看上去很开心的样子嘛。
 
