--- a/article/sg0/doc/0027.md
+++ b/article/sg0/doc/0027.md
@@ -3,25 +3,25 @@
 > [ 2010/12/24 ] 圣诞派对（下）交换礼物，星之奏名字引发跳线。  
 
 开始吃饭后过了大概一个小时。期间我也找机会联络了“红莉栖”，虽然一开始还是用无语的表情说着“比起我这边你更应该好好陪着真帆前辈！”但是听到我祝她圣诞快乐之后，表情明显变得惊喜且羞涩，丢下一句“圣……圣诞快乐！这下满意了吧？”而后匆忙挂断了电话。在大家的食欲都已得到满足以后，菲莉丝慢慢地拍手示意大家看向她。  
-“那么那么，大家喵~正好热闹的时候，我觉得差不多是时候开始交换礼物了喵~”  
+“那么那么，大家喵\~正好热闹的时候，我觉得差不多是时候开始交换礼物了喵\~”  
 “我们，没有准备什么很合适的礼物……”  
 比屋定和教授从和光市到这里来的途中，在堂吉诃德那花了大概 10 分钟左右选了礼物。  
 “没事的，这样就很好了喵！”  
 “我……什么都没带……”  
 “铃羽那份的话，我跟真由喜已经准备好了。”  
-“真由喜选的~”  
+“真由喜选的\~”  
 “这样啊……不好意思。”  
 “不用在意也可以 daze！”  
-“也可以 Da☆Ze~”  
+“也可以 Da☆Ze\~”  
 模仿着桶子的口癖，真由理从手提包里拿出两个包裹放在桌子上。桶子手里拿着的礼物也是同样的包装，应该是在同一家店一起买的吧。关于这方面，我事先从真由理那里听到，这是“作战的第二阶段”。今天晚上除了要让铃羽展开笑颜之外，还要让桶子跟由季的关系也有所进展，真由理是这么计划的。  
 “交换礼物的方法的话，想了很多，最后还是用抽签的喵！”  
 菲莉丝将所有人的礼物集中到了一起，然后把它们都贴上了带编号的小标签。  
-“喵~喵喵~~♪”  
+“喵\~喵喵\~\~♪”  
 一捆一次性筷子随着声音被高举起来。  
-“这个是~真由喜在今晚准备用来国王游戏的东西喵！”  
+“这个是\~真由喜在今晚准备用来国王游戏的东西喵！”  
 “哇！不要说出来啊，菲莉丝酱！”  
 “喂，真由理……国王游戏那种东西，是联谊的时候才玩的啊……”  
-“我知道的啦~只是稍微搞错了而已……”  
+“我知道的啦\~只是稍微搞错了而已……”  
 “嘛，被女孩子命令什么的，我这边是最喜欢的了！”  
 “桥田先生真是个 HENTAI 呢。”  
 除了吹雪棒读一般的吐槽，其他人自动过滤了桶子的变态发言。  
@@ -29,8 +29,8 @@
  抽中哪个编号，就可以拿到对应的礼物喵！”  
 菲莉丝将筷子弄混之后，分别走到每个人那里让大家抽签。  
 真由理的作战，菲莉丝也参与其中。事实上，真由理跟菲莉丝之间明显在用眼神和小动作在互相传递着信息。在大家还被蒙在鼓里地进行着抽签的时候，由季和桶子的礼物已经被单独拿了出来进行了标签交换的工作。搞得那么明显，我都担心会不会被由季发现。  
-“大家都抽好签了喵？那么就开始分发礼物了喵~要大家都拿到了礼物才可以打开喵！”  
-琉华子：“好激动啊~”  
+“大家都抽好签了喵？那么就开始分发礼物了喵\~要大家都拿到了礼物才可以打开喵！”  
+琉华子：“好激动啊\~”  
 绹：“会抽到什么呢？”  
 菲莉丝和真由理按照编号把礼物分给大家。所有人都拿到了以后，一起开始拆起了包装。  
 “噫？！”  
@@ -44,15 +44,15 @@
 “这，难道是……”  
 正在我怀疑的时候，准备这份礼物的元凶——吹雪凑了过来：  
 “嗯？啊啊，到冈伦那里去了啊！  
- 就这样当作礼物送给真由喜也可以哟~”  
+ 就这样当作礼物送给真由喜也可以哟\~”  
 “怎么办得到那种事！”  
 “为了冈伦的话，她肯定会很开心的穿起来的！”  
 “为什么会变成这种话题……”  
 “什么什么？真由喜怎么了？”  
 听到自己的名字，真由理表现出兴趣。  
 “诶？这个是……什么呢？”  
-“情趣睡衣哟，真由喜~而且是超级可爱性感的款式~为了冈伦穿起来吧？”  
-“唔诶诶诶~？”  
+“情趣睡衣哟，真由喜\~而且是超级可爱性感的款式\~为了冈伦穿起来吧？”  
+“唔诶诶诶\~？”  
 “这怎么能行啊……”  
 “那么，冈伦先生自己穿的话……也是可以的哟？”  
 “这……这个还给你。自己怎么开心怎么穿吧！”  
@@ -60,9 +60,9 @@
 “那，要和我交换吗？”  
 作为交换，吹雪把自己拿到的礼物递给了我。包装已经拆开，盒盖也已经打开了。我下意识地看了下里面。是一套粉红色的性感内裤和胸罩。依然是透透的那种。  
 “呃……”  
-“啊，那个是我拿来的礼物……要是能让真由理酱穿的话我会很开心的。请~”  
+“啊，那个是我拿来的礼物……要是能让真由理酱穿的话我会很开心的。请\~”  
 这次是枫。  
-“唔诶诶~？”  
+“唔诶诶\~？”  
 “你们难道就只有这样的想法吗……”  
 “真，真由喜的话，已经拿到了冈伦的礼物了，所以不用了！”  
 或许是因为青梅竹马的缘分，抽到我的礼物的是真由理。顺带一提，我准备的是，金块形状的巨大的巧克力。就是在堂吉诃德的聚会商品专柜卖的那种。但是貌似吹雪和枫正一脸鄙视地看着我的礼物和我本人。  
@@ -72,9 +72,9 @@
 “没有呢……”  
 “什么……”  
 没有，吗……明明写着选这个肯定没错的……  
-“真由喜很开心哟~因为，是金块哟？这种东西一辈子都摸不到的哟！”  
-“唔唔……好孩子啊，真由喜~”  
-“真是个好孩子呢……我摸我摸~”  
+“真由喜很开心哟\~因为，是金块哟？这种东西一辈子都摸不到的哟！”  
+“唔唔……好孩子啊，真由喜\~”  
+“真是个好孩子呢……我摸我摸\~”  
 吹雪和枫稍微带着点同情意味，但是又很怜爱地摸着真由理的脑袋。  
 总觉得……像是我这边的错呢……  
 
@@ -95,9 +95,9 @@
 桶子羞怯地举起了手。  
 由季：“诶？！”  
 吹雪：“唔诶诶！？”  
-枫：“啊啦呐~！”  
+枫：“啊啦呐\~！”  
 绹：“桶子叔叔，真了不起呢！”  
-铃羽：“嗯~？挺能干的嘛，哥哥。”  
+铃羽：“嗯\~？挺能干的嘛，哥哥。”  
 除了事前就知道里面东西的菲莉丝和真由理以外，所有人都发出了惊讶的声音。  
 “这是，桥田先生的呢。”  
 “怎，怎么样啊？虽然是我听了真由喜的建议选的……”  
@@ -123,16 +123,16 @@
 “这，这样啊……”  
 这时，由季从洗手间回来了，步伐相当不稳。虽然回到了座位上，还是冷静不下来扭扭捏捏的，吃着桌上的点心，偶尔瞟一瞟桶子那边。目前看来，电影票作战似乎进行得不错。太过关注的话，计划可能会暴露，所以现在尽量装作不知道会比较好。  
 
-“啊！真由喜准备的八音盒，到了真帆小姐那里了呢~”  
+“啊！真由喜准备的八音盒，到了真帆小姐那里了呢\~”  
 看见比屋定手里的八音盒，真由理兴奋地说着。八音盒整体设计成熊的形状，上好背后的发条后手脚和嘴巴会一动一动的发出声音。与刚才由季抽到的款式完全不同。  
 “我真的可以收下这么棒的礼物吗？”  
-“没问题的哟~请吧请吧~”  
+“没问题的哟\~请吧请吧\~”  
 绹：“什么样的音乐？我想听！”  
 琉华子：“是啊，我也想听听看呢。”  
 于是比屋定咯吱咯吱地扭动发条，枫很细心地把热闹的 BGM 关掉了。  
 “好了……”  
 比屋定放开发条的同时，八音盒独有的，虽然是金属质感却很温柔的音色播放了出来。喧闹的气氛慢慢变得舒缓起来，LAB 里开始充满惬意的放松感。八音盒的音符悄然地在我们耳边流动，让人陶醉其中。  
-“真由喜呢，最喜欢这首曲子了~”  
+“真由喜呢，最喜欢这首曲子了\~”  
 琉华子：“我也是。”  
 绹：“感觉心里变得暖呼呼的呢！”  
 真帆：“嗯，是呢。”  
