--- a/article/sg0/doc/0032.md
+++ b/article/sg0/doc/0032.md
@@ -11,7 +11,7 @@
 抽了抽鼻子，擦干了眼泪，铃羽问道。  
 “马上就到新的一天了哦。”  
 “抱歉，让你陪我到这个点。”  
-“没事没事。之前也说过的吧，无论如何依赖爸爸都没有关系 daze~”  
+“没事没事。之前也说过的吧，无论如何依赖爸爸都没有关系 daze\~”  
 “嗯……”  
 夜晚的寒气，从敞开的时间机器舱门那里潜入进来。铃羽和桶子说话时的气息全都变成了白色的雾气。机器里寂静无声。使用舱内的生命维持装置的话，就可以不用忍受寒冷了，但是铃羽不想把电源浪费在这里。铃羽用戴着手套的手摩擦自己的脸颊。从由季那里得到的手套非常暖和，全身上下只有手感觉热乎乎的。  
 “我相信啊，冈伦迟早有一天一定会和我们一起……  
