--- a/article/sg0/doc/0038.md
+++ b/article/sg0/doc/0038.md
@@ -9,7 +9,7 @@
 
 正在咖啡店看书时，手机响起了 RINE 的消息提示音。  
 
-『嘟嘟噜~♪现在在哪？』  
+『嘟嘟噜\~♪现在在哪？』  
 「![](../img/emoji/okarin-hecha.png)」  
 『啊，老地方的咖啡店啊  
  刚才去了冈伦家，你不在』  
@@ -53,7 +53,7 @@
 “那么，到底要买些什么东西？”  
 “那个，要做宣传商品用的 POP，所以，要买用到的卡片啊、荧光笔之类的。”  
 “今年准备在漫展卖同人本么？”  
-“不是的，用在『冈部青果店』的哟~”  
+“不是的，用在『冈部青果店』的哟\~”  
 “啊？你说什么……？”  
 我的老家？  
 “今天，去冈伦家的时候，和叔叔谈到了这件事。  
@@ -73,7 +73,7 @@
 “怎么了吗？”  
 “难道说在买东西？”  
 “嗯，和真由理一起。”  
-“诶~约会？”  
+“诶\~约会？”  
 “sweet(笑)”  
 “都说过不要用这种说法了。”  
 “那么，你也改改你恋爱脑的习惯吧。”  
@@ -98,7 +98,7 @@
 桶子是怎样的人，我不厌其烦地灌输给了“红莉栖”，所以她应该能轻易想象出，被交到那个人手上的瞬间，自己会被如何当成玩物的吧。  
 “……果然，不用介绍也好。  
  有你作为谈话对象了，应该觉得满足了才是——”  
-“冈伦~”  
+“冈伦\~”  
 就在这时真由理拿着购物篮回来了。  
 “咦？刚才在和谁说话呢？”  
 “啊，呃、嗯，那个……”  
@@ -111,7 +111,7 @@
 购物篮里面，放着大量的心形或星形的 POP 纸。这些……与我老家店铺的氛围，致命地不合适的感觉……但是，这也是一开始就肯定会变成这样的——全部交给真由理的品味的话。之后可能会被老爸牢骚一番，但是不关我的事。拜托真由理的不是我，而是老爸。因此，我什么意见也没说就去结账了。因为是周六，收银台附近等待结账的客人堆得满了出来，会很费时间的样子，我就让真由理到别的楼层的动漫周边卖场去等了，那里会有真由理喜欢的《雷 NET 翔》的周边商品出售。真由理觉得很抱歉的样子，还是按照我说的去了。  
 
 结果，结账花了 15 分钟。同时我为表歉意许下的送礼物的约定也兑现了。  
-“诶嘿嘿~~”  
+“诶嘿嘿\~\~”  
 真由理一副高兴至极的样子注视着手上的钥匙圈。  
 
 ![](../img/0038-2.png)
@@ -123,7 +123,7 @@
 全身闪烁银色光辉的金属乌帕，在乌帕之中也算人气很高，作为商品的稀有度也很高。比方说的话，以便利店的商品抽签来说，金属乌帕肯定相当于特等奖。据说在网上拍卖的话能值好几万，之前听真由理说过的。  
 “不-不-不——”  
 真由理不知为何显得很得意的样子，左右摇动着食指。  
-“不是的哦~这个啊，虽然是绿色的乌帕先生，但是和普通的不一样的！  
+“不是的哦\~这个啊，虽然是绿色的乌帕先生，但是和普通的不一样的！  
  是在之前放映的电影中登场的‘森之妖精先生乌帕’哟！”  
 说起来，《雷 NET 翔》的剧场版在春季上映了呢。真由理也混在小孩子当中去看了吧？  
 “森之妖精先生？”  
@@ -132,39 +132,39 @@
 “那个，这次的电影啊，是在虚拟世界中与邪恶的超级黑客先生们战斗。  
  那个虚拟世界啊，就是妖精先生住的森林。  
  超级黑客先生特别强呢，翔君和乌帕们都陷入了危机……  
- ‘已经不行了~！’的时候，妖精先生们前来帮忙了呢。
- 其实，那些妖精先生们，是翔君在照顾的学校花坛的花儿们哦~
+ ‘已经不行了\~！’的时候，妖精先生们前来帮忙了呢。
+ 其实，那些妖精先生们，是翔君在照顾的学校花坛的花儿们哦\~
  为了拯救一直都温柔地照顾它们的翔君，  
- 在虚拟世界‘皮卡皮卡~’地放着光与乌帕合体了！
- 那就是这个‘森之妖精先生乌帕’！超级可爱，超级强大的哟~
- 真由喜好感动啊~对这类剧情没辙呢~导演先生真是天才啊~”
+ 在虚拟世界‘皮卡皮卡\~’地放着光与乌帕合体了！
+ 那就是这个‘森之妖精先生乌帕’！超级可爱，超级强大的哟\~
+ 真由喜好感动啊\~对这类剧情没辙呢\~导演先生真是天才啊\~”
 “原、原来如此啊。”  
 能让真由理这么热衷地诉说的事情实在少有。的确仔细看的话，能发现真由理拿着的乌帕和普通的绿色乌帕在设计上稍微有些区别。因为不怎么了解乌帕，哪里有什么不一样……要是被这么问的话还是一头雾水的。  
 “这个钥匙圈啊，我到处找过呢。  
- 超级有人气的，不管哪里都卖完了哟~没想到 HANDS 还有剩下的呢~”  
+ 超级有人气的，不管哪里都卖完了哟\~没想到 HANDS 还有剩下的呢\~”  
 “很幸运呢。”  
-“嗯！而且，这是最后的一个哟~今天来了真是太好了，要感谢冈伦和叔叔呢！”  
+“嗯！而且，这是最后的一个哟\~今天来了真是太好了，要感谢冈伦和叔叔呢！”  
 真由理用指尖灵巧地拆开纸质的商品包装，从包中取出家里的钥匙，然后小心地装了上去。  
-“嘿嘿~呐，冈伦，真由喜啊，要把这个一直~一直~~珍藏着的！”  
+“嘿嘿\~呐，冈伦，真由喜啊，要把这个一直\~一直\~\~珍藏着的！”  
 “啊，好好珍惜吧！千万别才买了 5 分钟就丢了哦。”  
 真由理可是有前科的。我在广播管抽到的金属乌帕，在交到真由理手中后，仅仅 5 分钟就弄丢了。到最后，那个金属乌帕也一直都没有找到。那个时期的事不怎么想回忆起来，所以关于金属乌帕的去向也就不了了之了。  
-“嗯！绝对、绝~对~~不会再弄丢的！”  
+“嗯！绝对、绝\~对\~\~不会再弄丢的！”  
 一边说着这些话，两个人踏上了回家的路。  
 “冈伦家店的 POP，我就鼓足干劲去做咯！”  
 “啊——还有这么一回事啊……”  
 还以为买完材料就算结束了。不如说现在才是正式开始。  
 “要我帮忙吗？”  
-“不不，没事的。希望你能相信真由喜的品味啊~”  
+“不不，没事的。希望你能相信真由喜的品味啊\~”  
 “……光是买了心形的 POP 这点，就该怀疑你的品味了。”  
-“没问题的啦~”  
+“没问题的啦\~”  
 “嘛，能帮忙弄 POP 已经很感谢了，没什么抱怨的了。”  
 “啊，要给妈妈发个短信呢，告诉她晚饭的时候再回去。”  
 “那要不在我家吃也行啊？反正我爸妈他们肯定要留你的。”  
-“唔~嗯，怎么办比较好呢~  
+“唔\~嗯，怎么办比较好呢\~  
  冈伦的话，今天之后一直在家的吗？不去联谊什么的吗？”  
 “最近完全都没去了。”  
 去年秋天刚弃掉中二病那会儿倒是想着成为一个普通的大学生什么的，然后十分勉强地跑去参加联谊来着。最近则是忙于学习的事，去参加的机会也减少了。  
-“这样啊~那，我就去打扰了~”  
+“这样啊\~那，我就去打扰了\~”  
 
 就在真由理稍微犹豫着拿出手机，想要输入邮件的时候——  
 她的表情，突然沉了下来，就那么站在原地不动了。  
