--- a/article/sg0/doc/0051.md
+++ b/article/sg0/doc/0051.md
@@ -70,7 +70,7 @@
 ![](../img/0051-3.png)
 
 “啊——！”  
-“嘟嘟噜~♪这里是真由喜~”  
+“嘟嘟噜\~♪这里是真由喜\~”  
 “真由理！是真由理吗！？真的是真由理吧！？”  
 “冈、冈伦？怎么了，这么慌张？”  
 电话那头传来的悠然自在的声音，毫无疑问来自真由理。  
@@ -81,15 +81,15 @@
 “不，别在意。只是……有点不安而已。”  
 “不安？”  
 “……你现在在哪里？有和谁在一起吗？”  
-“现在要去打工哦~”  
+“现在要去打工哦\~”  
 “到几点？”  
 “八点之后吧。”  
 “是吗，我知道了。”  
 “冈伦，你要过来玩吗？”  
 “不，今天还有事，去不了啊。”  
-“我打完工还打算去 LAB 一趟哟~”
+“我打完工还打算去 LAB 一趟哟\~”
 “我知道了……如果我有时间，怎么呢就在那汇合，一起回去吧。”  
-“真的~~？今天很稀奇呢！诶嘿嘿~”  
+“真的\~\~？今天很稀奇呢！诶嘿嘿\~”  
 “那，打工加油啊。”  
 语毕，我挂断了电话。  
 真由理平安无事。也就是说，刚刚的世界线变动与真由理无关吗？虽说不能疏忽大意……或者刚刚的只是单纯的眼花啊白日梦之类的，根本就不是什么世界线变动？如果真是这样，我反倒觉得现实过头了。  
