--- a/article/sg0/doc/0079.md
+++ b/article/sg0/doc/0079.md
@@ -2,7 +2,7 @@
 > 1.081163  
 > [ 2011/01/04 真帆视角] 萌郁陪真帆前往电机大的临时办公室，途中两人关系拉近成为朋友，互称姓氏。来到临时办公室后，雷斯吉宁教授、真帆、“红莉栖”三人准备开会商讨后续计划。  
 
-“哈~啊——好险好险。”  
+“哈\~啊——好险好险。”  
 真帆不经意间忍不住打了个哈欠，慌乱地打住，然后确认了一下周围有没有人看到自己这羞耻的样子。周围靠近栏杆打发时间的人还有很多，当然大家都沉浸在自己的事情里，没人注意到真帆。本来今天是要在菲莉丝家，一整天都继续进行办公室暂时关闭的相关事后处理。但是早上，雷斯吉宁教授来了个电话，要真帆去东京电机大学一趟。好像是为了代替无法继续使用的和光市的办公室，而暂时借用了电机大的一间办公室。说是通过之前研讨会上帮过忙的的电机大的井崎准教授，对方虽然还在新年假期中，但是联系之后立刻同意了。顺带为了商讨关于今后的计划，真帆准备去往电机大的临时办公室。东京电机大学的神田校区，好像在离秋叶原不是很远的地方。  
 “话说真是好天气呢。”  
 从建筑物之间看到的天空，是冬天特有的澄净。因为昨天几乎整天都窝在房间里，即使吸到这样冻结般的空气，也感觉好舒服。真帆双臂并拢向上伸去。  
@@ -50,7 +50,7 @@
 「平常地用名字称呼就好  
  对于冈部，你就只是称呼他为冈部君而已啊  
  ![](../img/emoji/bear-zenyang.png)」  
-『因为冈部君年龄比较小而且还是学生啦~（;﹏;）』  
+『因为冈部君年龄比较小而且还是学生啦\~（;﹏;）』  
 「同样对待我也没关系啦  
  我们会当一段室友，而且年龄也差不多不是吗  
  用“萌郁”/“真帆”来互相称呼怎么样？」  
@@ -68,10 +68,10 @@
 “……啊？”  
 萌郁吓得睁大了眼睛。  
 “……现……现在？在……这里……？”  
-“对~”  
+“对\~”  
 萌郁声若蚊蝇般发问，真帆鼓励地点了点头。  
 「既然决定了就要立即实践吧」  
-『但是但是！刚刚也说了，我，对于和人谈话真的很不在行啊~！（>_<）  
+『但是但是！刚刚也说了，我，对于和人谈话真的很不在行啊\~！（>_<）  
  ![](../img/emoji/taru-gui.png)』  
 「这样吗？  
  还以为昨天你紧张是因为冈部在呢  
@@ -90,7 +90,7 @@
 知道了！我努力试试看！（>_<）』  
 萌郁终于下定了决心，抬起头看向真帆。  
 “……比……比屋定……请……多多关照。”  
-“嘿嘿，请多关照呢，桐生~”  
+“嘿嘿，请多关照呢，桐生\~”  
 
 就这样，电车到达了目的地。东京电机大学的周围一片寂静。从萌郁处得知，由于办公区和官府区就在附近的缘故，这个时间段基本没人。对萌郁说了声抱歉，请她在外面等一下。现在大学正在假期，虽然在校园内也能找个教室让她待一会，但是她却拒绝了。  
 “那结束后再联系你。”  
