--- a/article/sg0/doc/0081.md
+++ b/article/sg0/doc/0081.md
@@ -82,7 +82,7 @@
 突然从菲莉丝那里收到“今天晚上开女子会”的通知，作为准备，菲莉丝拜托她们不要吃晚饭保持空腹。真帆和萌郁都很忠实地遵守了。  
 “快点快点，快拿喜欢的来吃喵！蛋糕、冰淇淋什么的，还买了稍微贵一点的喵！”  
 菲莉丝欢快地从便利店的塑料袋里一包接一包的往外掏。平常看起来是很有大小姐范，实际上也的确是大小姐的菲莉丝，有需要的话，也会买价钱要多个一两位的蛋糕。不过，她也很明白，深夜女子会需要的蛋糕零食要从便利店买，于是她也毫不介意地执行了。真帆觉得不论是 *MayQueen* 的客人也好，女仆们也好，一定都很敬仰她这一点。*MayQueen* 年初开张以来，好像就一直处于女仆数量不足的状态。但是今天菲莉丝身上却看不出一丝疲惫。  
-“嗯~？真帆喵怎么了喵？迷上菲莉丝了喵？来自女孩子的求爱一直欢迎的喵~~”  
+“嗯\~？真帆喵怎么了喵？迷上菲莉丝了喵？来自女孩子的求爱一直欢迎的喵\~\~”  
 “啥！才没有啦！”  
 “不要害羞喵！对礼物满意的话，菲莉丝也会很开心的喵！”  
  如我所料，这件熊猫睡衣很合适喵！ ”  
@@ -120,14 +120,14 @@
 “……对、对不……哈啊、嗯、哈啊哈啊……起……”  
 萌郁一边喘气一边道歉。好像觉醒了什么不能觉醒的东西……真帆默默摇了摇头。  
 “算了，那我们开始女子会吧。”  
-“好~！我去拿冰镇果汁喵！今晚……不许睡觉喵~！”  
+“好\~！我去拿冰镇果汁喵！今晚……不许睡觉喵\~！”  
 “不许睡觉”只是菲莉丝风格的玩笑而已，她明天很早就要去工作。女子会定为两小时，三个人一直在谈天说地。实际上不过是菲莉丝一直在讲，真帆和萌郁偶尔回答两句的程度。就女子会而言，也许一般话题是打扮或者恋爱关系，但是三个人的关注点都不在这些话题上，取而代之的是当下的工作或者将来相关的内容。聊天过程中，她们很开心地发现彼此令人意外的一面。例如萌郁——  
 “……兴趣是……写……小说。”  
 在阅读最近流行的手机小说的过程中，产生了自己写的念头。而且是有不少和谐场景的恋爱小说。  
 “让我看看喵！”  
 “……不行……一章都……还没写完……”  
 虽然萌郁拒绝了，菲莉丝和真帆还是强硬地和她结下了“写完就给我们看”的约定。菲莉丝也说出了令人意外的话语——  
-“虽然不打算终结女仆事业，我也很憧憬结婚喵~想要有好多孩子喵！”  
+“虽然不打算终结女仆事业，我也很憧憬结婚喵\~想要有好多孩子喵！”  
 自幼失去双亲的菲莉丝，想要尽早拥有自己的家人，而且想要很多，从而组建热闹的大家庭。最后三十分钟左右，在菲莉丝的软磨硬泡下，真帆慢慢讲述着关于人工智能的研究。真帆在昨天的采访之外，又多补充了一些，聊了聊关于框架问题，关于『Amadeus』，还有关于诞生了超越人类的人工智能的未来。菲莉丝除了萌文化，对技术和发明也很有兴趣，兴致高昂地听着真帆讲话。但是真帆讲话的时候，注意到萌郁低下了头。  
 “桐生，怎么了？”  
 “…………”  
