--- a/article/sg0/doc/0071.md
+++ b/article/sg0/doc/0071.md
@@ -1,6 +1,6 @@
 # 轨道秩序的日蚀 - 09
 > 1.064750  
-> [ 2011/01/01 琉华子视角] 琉华子感觉自己被排斥在秘密外，但铃羽觉得说不定冈伦是想让他单纯地活在“现在”作为救赎。  
+> [ 2011/01/01 琉华视角 ] 琉华子感觉自己被排斥在秘密外，但铃羽觉得说不定冈伦是想让他单纯地活在“现在”作为救赎。  
 
 ![](../img/0071-1.png)
 
