--- a/article/sg0/doc/0022.md
+++ b/article/sg0/doc/0022.md
@@ -3,8 +3,10 @@
 > [ 2010/12/18 铃羽视角 ] 铃羽病后康复期难得的平静日常。第一次听由季唱《星之奏》。  
 
 那之后过了 3 天，铃羽依然处于被照顾的状态。由季每天都会和真由理一起来看望。正因如此，铃羽能够吃到有营养的东西，烧完全退了。接下来只要恢复了体力，就完全康复了。尽管这样，由季还是说“请接着静心养病”。归咎于此——或者应该说，托她的福——尽管现在是白天，铃羽还是躺在沙发上打着盹。刚刚开始有点清醒时，通过微弱的意识——好像从远处的某个地方，传来了非常五音不全的歌声。  
-*♪\~有个要寻找的东西\~星星在对我笑眯眯\~♪*  
-*♪\~随着风眼睛眨呀眨\~伸出手的话就能够抓到哟\~♪*  
+*♪\~有个要寻找的东西\~♪*  
+*♪\~星星在对我笑眯眯\~♪*  
+*♪\~随着风眼睛眨呀眨\~♪*  
+*♪\~伸出手的话就能够抓到哟\~♪*  
 伴随着水声听见了这歌声，是在淋浴吧。  
 这……是什么歌啊？  
 铃羽小时候也听过妈妈唱着这首歌。然而歌的具体内容，因为已经是很久以前了，无论如何都想不起来。  
